--- a/hardproblem/1-03.html
+++ b/hardproblem/1-03.html
@@ -14,51 +14,156 @@
 
   <div class="contents">
 <div class="text">
-　13回。
-　女の子が希海の上から離れるまでに言った『すいません』の数である。
-「本当にすいません、私、何だかぼんやりしちゃっていて……」
-　14。地面に落としたスーパーの袋を拾い上げながら、希海はへらへらと笑う。
-「だからそんなに謝んなくていいって。ここの階段こけやすいしね」
-　購入した品物は大丈夫だろうか。倒れたとき、思いっきり地面に叩きつけてしまったから、ひょっとしたらいくらか、やられているかもしれない。希海は袋の口を開けて中身をさっと確認する。
-「それよりあんたの方は大丈夫なの？　どっか壊れたりしてない？」
-「えっ」
-　希海の言葉に女の子が固まる。
-「あれ？　あんたロボットなんでしょ。違った？」
-「…………どうして分かったんですか」
-　自らの正体を看過されたことが不思議だったようだ。無理もない。この子の見た目はあまりにも人間とそっくりで、ぱっと見はおろか、その外見をじっくりと眺めてみたとしてもロボットだと容易には判別できない。希海だって胸元の二次元コードがなければロボットだと気付くことはなかっただろう。
-「えーっと……ほら、あんたの二次元コードが目に入ったからよ」
-　胸のところの、とは言わなかった。普段から胸元をじろじろ見ているのかと思われそうで少し気恥ずかしいからだ。相手がロボットだと、普段気にしなくていいようなことまで気にしてしまうのだろうか。仮にも女同士なのだから胸を見ようがどこを見ようが、何も後ろめたいことなどありはしないのに。というかそもそも、そんな服を着られたら意図せずとも見えてしまう。
-　服。そういえば――――
-　最初に抱いた疑問が、希海の脳裏に蘇ってくる。
-「それはそうとさ。その格好、どうしたの？」
-　彼女が身にまとう、紙でできたぶかぶかの衣服。いくらロボットといえどもこんな服を着て街中を歩きまわるはずがない。彼女がアンドロイドであるという衝撃にとらわれていて、希海はそのことをすっかり忘れてしまっていた。
-「あ……。えっと、これは…………」
-　女の子はごにょごにょと言い淀みながら居心地悪そうに下を向き、やがてそのまま一言も喋らなくなってしまう。どうやら、聞いてはいけない質問をしてしまったらしい。
-「あっ、む、無理に聞くつもりはないんだけどさ。もし何か困ってたら、え、遠慮せずに言ってよ。ロボットだからって気にすることないよ。みんな、じ……自分一人の力じゃ生きてるわけじゃない……んだから」
-　急いで場を取り繕う希海。だが、女の子はまん丸な目を釣り下げ、埃のかぶったアスファルトをじっと見つめたまま動こうとしない。その姿はまるで隠していたイタズラか何かを発見されて、叱られることを覚悟した子供のように見えた。
-「ま、まあ別に言いたくないなら、無理して言わなくてもいいんだけど、……ね。誰だって話したくないことの…………、一つや二つくらいある、と思う…………し……」
-　希海は沈黙を埋めようと必死だった。もはや自分でも何を喋っているのかよく分からなくない。
-「あ、えっと……だから……その……」
-　そして言葉が尽きた。
-　さて、どうしたものか。希海はまぶたを閉じて大きく息をつく。女の子はうつむき、眉間に皺を寄せたままだ。アスファルトの上に立ち、夕日に照らされるひとりの少女。いや、正確には少女の姿をしたロボット。希海が初めてこの目で見たロボットである。その姿は想像していたよりもずっと人間にそっくりで、見れば見るほど本当にロボットなのか疑わしくなってくる。ほら、こうしてうつむいている間も、不規則にまばたきをしたり、呼吸でかすかに肩を上下させたり、ばつが悪そうに指先をもぞもぞと動かしたりしているではないか。
-「……じゃあ……私、行くから」
-　そして希海が打った次の一手は、これ以上何もしないということだった。どうしたもこうしたもない。本人がそれ以上話したくないと言うのなら、希海にできることなど何ひとつ残ってはいなかった。
-　スーパーの袋を手に取り、女の子に背を向けた。
-　希海は欠陥だらけの階段へと足を掛け、登山者の心境で一歩また一歩と登っていく。後ろの女の子は、今どんな顔をしているのだろう。隠し事がばれずにすんだ安堵の表情か、不審な奴に会ったという怪訝な表情か。はたまた背を向けた途端にロボットらしい無表情にでも戻っているのかもしれない。
-（何やってんだろ私……）
-　おどり場に差し掛かった希海は、自嘲気味にため息をつく。
-　そんなに彼女のことが気になるなら、今からでも振り返ってもう一度話しかければいい。「変なこと聞いてごめんね」と笑って、そのあと気が済むまで世間話でも何でもすればいい。
-　だが、希海にはどうしてもそれができないのだ。一度告げたさよならを撤回して引き返してくることがかっこ悪いと思っているのか、それとも何度も話しかけて彼女にしつこく思われるのが怖いのか。どちらにせよ下らない理由だ。それは希海も分かっている。分かってはいるが、どうしてもできないのだ。
-　いつだってそうだ。希海にとって、頭で理解することと実際に行動することの間には、次元の違いほどの大きな隔たりがある。そもそも振り返ってみたところで、止まってしまった会話が再び息を吹き返すとは希海には思えない。百歩譲ってそれができたとしても、どこかでまた変なこと言ってしまって気まずくなるのがオチだ。
-　背後で階段を駆け上がる音がした。
-　希海の思考が中断される。タッタタッタッタタタッと、でたらめに演奏したパーカッションのようなリズム。その理由は足場の広さが統一されていないからで、この階段を駆け上がれば誰だってそうなる。たとえそれが科学の粋を集めて作られたアンドロイドであったとしても。
-「待ってください！」
-　意を決したような声が強く響き、右腕を強く引っ張られた。
-　今現在、希海が立っている場所はただでさえつまずきやすい、あの欠陥だらけの階段だ。足元のコンクリートはボコボコに歪んでおり、あろうことか下側に向かって微妙な傾斜までついている。
-「うわっ！？」
-　姿勢が崩れた。
-　両手を振り回してバランスを取ろうにも、右の腕は背後から掴まれたままである。左手でがむしゃらに宙を引っ掻き、両足の筋肉を硬直させて必死に踏ん張ると、重心の変位は次第に収まっていく。
-　今度は転ばずにすみそうだった。
+　青山希海は、生まれも育ちも<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンだ。上新台の市立病院で生を受け、小学校は真浜区立<ruby>第六小学校<rp>《</rp><rt>ロ　ク　シ　ョ　ウ</rt><rp>》</rp></ruby>、中学校は同じく区立の<ruby>第三中学校<rp>《</rp><rt>サ　ン　チ　ュ　ウ</rt><rp>》</rp></ruby>。高校だって近所にあって実家から通っていたし、現在希海が籍を置いている真浜大学も高校と同じ敷地にある。
+「遠慮せず上がってよ。狭いところだけど」
+　乱暴に靴を脱ぎ捨て希海は言った。狭いという言葉は謙遜でも何でもなく、実際にこの玄関では二人並んで靴紐が結べそうにない。
+「あ、はい。お邪魔します」
+　女の子の言葉を背中で受け、希海は一足先に自室へと入る。このボロアパートに他人が来るのは大学に入って間もない頃に友人を呼んで以来だ。
+　最後に掃除をしたのは去年の秋ごろだったか。来客がなければ部屋はどんどん散らかっていく。放おっておくと恐ろしいことになる生ごみの類はきちんと捨てるようにしているのだが、それ以外の『腐らない』『痛まない』『匂いがしない』ものは出したら出しっぱなしである。
+　床には漫画やらゲームやら脱ぎっぱなしの服やらが所狭しと散乱しており、ベッドの周囲には新書やら小説やらが折り重なって置かれている。机の上はノートパソコンと周辺機器が綺麗に並べてあるものの、それ以外の余剰スペースには音楽ＣＤとＤＶＤが山積みだ。その一方でベッドの上とノートパソコン、あとゲーム機の前だけはぽっかりと人ひとり分のスペースが空いており、その散らかり具合はまさに『寝て起きてネットとゲームをすること』だけに最適化されていると言っても過言ではない。
+「あーごめんね。散らかってて。とりあえずベッドにでも座ってよ」
+　部屋の入口で固まっていた女の子を誘導し、希海はパソコンの前に座った。一人暮らしの部屋がそんなに新鮮なのか、それともあまりの散らかり具合に驚いているのか。ベッドの隅にちょこんと座った後も、女の子は物珍しそうに四方八方を見回している。
+　さて何から聞きだしたものか。
+『助けてください！』
+　希海はほんの数分前に彼女から聞いた言葉を反芻してみる。
+（そもそも、記憶喪失ってどういうことよ……）
+『私……気付いたらこの町にいて……それで』
+『どこで何をしてたか、どうしてここにいるのか、とにかく何も覚えてないんです……』
+　女の子はそう言った。最初は階段から落ちた衝撃でデータが飛んでしまったのかと思ったが、詳しく話を聞いてみるとどうもそうではないらしかった。
+『目が覚めたら、見たこともない場所にいました。暗くてじめじめしたところ……たぶん倉庫だと思います。そこには私と同じアンドロイドがたくさんいて、みんな電源が落ちたり壊れたりしていました』
+　倉庫の中にいるたくさんの壊れたアンドロイド……。おそらく、廃棄されたロボットの一時管理所だろう。つまり、この女の子は捨て犬ならぬ捨てロボットというわけだ。それなら女の子が着ている変な服も説明がつく。あの服は廃棄前のロボットに着せる、いわば死に装束のようなものなのかもしれない。
+　古くなったパソコンに服を着せて捨てたりしないのと同じで、いらなくなったロボットに服を着せようとする者などまずいない。だが、この子の場合はアンドロイドである。胸の刻印と、あといくらかの差異を除けば、その外見は人間の少女のそれとなんら変わるところはない。きめ細やかな柔肌も、小さな肩の曲線も人間と同じ。胸の膨らみだって精巧に作り込まれている。
+　そんなロボットを一糸まとわぬ姿で引き渡されれば、運搬業者も解体業者もたまったものではないだろう。相手が裸体の少女では日々の仕事もさぞやりづらいに違いない。そんなわけでアンドロイドを捨てる際には、あの簡易的な服を着せるようにしているのではないか。紙でできているのはコストを低く抑えられるのと、あと、解体の際に容易に破けるようにするためだ。
+『そこから逃げ出したことは覚えています。何かやらなきゃいけないことがあったんですけど、気付いたらここにいて、何をやろうとしていたのかも思い出せなくて……』
+　記憶喪失のロボットなんて初めて聞いた。プロセッサだかメモリだかに不具合が生じているのか、プログラムのバグなのか、それとも自分には想像も付かない難解な要因が複雑に絡み合っているのか。いずれにしても門外漢の希海には手の出しようがない問題である。
+　『そうなんだ』とか『大変だね』とか、そんな愚にもつかない言葉が喉まで出かかった瞬間、希海の脳裏を一つの映像が駆け抜けた。紙でできたぶかぶかな服。襟元からのぞく少女の白い肌と二次元コード。
+「一人で暮らしているんですか？」
+　意識が自室に連れ戻された。
+「えっ……あ、何？」
+「ここの部屋に一人で暮らしているんですか？」
+　女の子は希海の素っ頓狂な声にも怪訝そうな顔ひとつみせず、物珍しそうな表情を湛えている。
+「ああ、うん。大学の頃からね」
+「お父さんお母さんと同居しないんですか？」
+　そこはご両親と言うべきところじゃないのか、と希海は心の中で突っ込みを入れる。言語処理のいびつさがロボットらしいと言えばロボットらしかった。
+「二人ともいま海外だから」
+　たしか重慶かどこかだ。高校の頃まで暮らしていた家は引越しのときに売ってしまったので、現在希海はこの玄関の狭いボロアパートで一人暮らしをしている。
+「いいなぁ。一人暮らしって楽しそうですよね」
+　無邪気に瞳を輝かせる女の子の姿は、中学生どころか小学生に見えるほど幼い。
+「私も実際にやってみるまではそう思ってたわよ……。あ、そうだ。それよりさ。あんたのことなんだけど」
+「私……ですか？」
+　女の子は発言の意図が読み取れないかのような、ぽかんとした表情を浮かべている。
+「ちょっと……まさかさっきの話、忘れたんじゃないでしょうね」
+「ち、違いますって。ちゃんと覚えていますよ。ウェブで私の製品情報を調べてくれるんですよね」
+　そうだ。何も散らかった部屋が見せたくて彼女を自室に呼んだわけではない。この子の胸の二次元コード――いわゆるＱＲコードである、を携帯端末で読み取れば製造メーカーとロットナンバーくらいは知ることができるだろう。あとはホームページで連絡先を調べて、サポートセンターかどこかで色々と教えてもらえばいい。
+「じゃあこれでコード読み取ってみて」
+　端末を操作して読取画面を呼び出し、女の子に差し出す。
+「えっと、これどうやって使えばいいんですか」
+「もう読取画面は開いてるから、そのままかざせばいいだけ。あ、もしかして服脱いだほうがやりやすいかな。何なら洗面所使う？」
+　そして数分後。
+　引き戸を隔てた向こう側から声がする。
+「あっ、できましたできました」
+　ようやくか、と希海は小さくため息をついた。
+　自分の体に刻印されたコードを読み取るのがそんなに難しかったのか、それとも単にどんくさいだけなのか。『女の子がコードの読み取りに手こずっては端末がホーム画面に戻り、その度に希海がもう一度読取画面を呼び出して、再び女の子に端末を手渡す』というサイクルをふたりは既に3周も行なっていた。
+「聞いてます？　読み取れましたよ」
+「ちょ、ちょっと！　服くらい着てから出てきなさいよ！」
+　女の子が裸で洗面所から出てきた。厳密に言うと裸ではなく脱いだ服で前を隠してはいるのだが、似たようなものである。
+「だって早くしないとまた元の画面に戻っちゃうじゃないですか」
+　そもそも読み取り画面が自動で戻ってしまうのは、カメラの誤起動による電池の消耗を防ぐためだ。したがってごく普通の一般的な端末の場合、一度コードを読み取ってしまうと、ボタン操作を行わない限りは勝手に待ち受けに戻ってしまうことはない。そして希海の携帯端末も、ごくごく普通の一般的なものである。
+「大丈夫だから！　戻らないから！」
+　女の子を洗面所に押し返し、受け取った携帯端末の液晶パネルに目を落とした。製品情報はご丁寧にも中日韓越英の5ヶ国語で書かれており、希海はその中の日本語で書かれた部分に画面をスクロールさせる。
+
+　<span class="simplified">型番</span> : SUM17F4JP1698
+　<span class="simplified">制造番号</span> : 09-130221-0802-000
+　<span class="simplified">制造・贩卖</span> : <span class="simplified">上海人偶机器人工学有限公司近畿支店</span>
+　カスタマーサポート : 0120-XXX-XXX (２４<span class="simplified">时间</span>)
+
+　ビンゴ。ウェブで検索するまでもなく電話番号まで載っていた。しかも、ありがたいことにフリーダイヤルである。
+「どうでしたか？」
+　服を着た女の子が洗面所から出てくる。
+「うん。とりあえず番号は手に入った。あとはここに電話すればいいんだけど……」
+　ただ、気掛かりがひとつあった。
+　この子は廃棄されかかっていたところを逃げ出してきたのだ。廃棄という言葉自体には単に『捨てる』という意味合い以上のものはないのかもしれない。だが、実際にはきちんとパーツごとに解体し、使える部品を再利用したりリサイクル業者に売ったりしているのだろう。今日び、パソコンですら内部の貴金属を再利用しているくらいだ。ましてやこの子は科学技術の粋を集めて作られたアンドロイド。その体内には金の鉱脈が縦横に走っていると言っても過言ではない。つまり廃品といっても会社にとっては一種の資産なのだ。それくらいは希海にだって容易に想像ができる。
+「あんたさ、逃げ出したことがバレたらまずいんじゃないの？」
+「あ……」
+　女の子の顔が曇る。
+「家出くらいなら、まだ叱られるだけですむんだろうけどね。あんたの場合は、逃げ出したところがスクラップ工場なわけでしょ。叱られるどころか下手すれば、っていうか確実にそのまま墓場行きよ？」
+「…………そう……ですよねやっぱり」
+　またもや女の子は困った顔で俯いてしまった。またやってしまった。希海は急いでフォローを入れようとする。
+「でも……」
+　しかし沈黙は訪れなかった。女の子は希海の目をまっすぐに見つめて、一言ずつ、自分自身に言い聞かせるように、ぽつりぽつりと言葉を紡ぎだす。
+「でも、私は……それでも構いません。私が何者だったのか……私が……今まで何をしてきたのか」
+　女の子の視線が希海に突き刺さった。
+　人と目を合わせることが苦手な希海は居心地の悪さを感じる。だが彼女の真剣な眼差しは、視線を逸らすどころか瞬きひとつ満足にさせてくれようとはしない。
+「それが知れたら私は……多分ですけど、悔いも恐れもなく死んでいけるって……そう思うんです」
+　くりっとした丸い瞳。虹を閉じ込めた瞳。身に降りかかる不幸を受け入れ、それでも自らのすべきことをひたむきに追いかけようとするその姿。女の子の目を見つめたまま、希海はその場に固まってしまっていた。
+「だから私のことは……気にしないでください。私は、私の知りたいことを……知りたいだけなんですから」
+　女の子はそう言い切ると、少し寂しそうな笑みを浮かべた。あの日自分が憧れた存在が、今まさに目の前に座っている。そんな気がした。
+　だから、希海は言いたいと思った。
+「あっ」
+　言ったところでどうなるものではない。
+「あのね……」
+　それどころか話の本筋には全く関係がない。変な奴だと思われるかもしれない。気持ちの悪い奴だと思われるかもしれない。
+「私……」
+　けれども、どうしても言いたかった。初めて出会ったロボットのこの子に。あこがれて、それでも手に入らないものを持ったこの子に。
+「私、ずっと」
+　――機械になりたかった。
+　その言葉が喉まで出掛かったそのとき、
+
+　不意に呼び鈴が鳴った。
+「あ、お客さんですよ」
+　女の子の表情が無邪気な少女のそれに戻る。
+　人が大事な話をしようとしているときに一体誰だ。希海は心の中で毒づきながらも、しぶしぶ玄関へと足を運ぶ。恋人も友達も居ない一人暮らしの大学生にとって、来客者とは訪問販売のセールスマンか国営放送の料金徴収と相場は決まっている。受信料はこの間払ったはずだから訪問販売だろうか。
+「……はい」
+　扉を開けるとスーツ姿の見知らぬ中年男性が立っていた。案の定である。
+「いま取り込み中なんで後にしてもらえますか」
+　希海は相手の姿を確認するやいなや先制攻撃を仕掛ける。この手の訪問販売には有無を言わさずに帰ってもらうのが最善の戦法だ。情けは無用。少しでも隙を見せたら、延々とセースルトークを聞かされるはめになる。
+「ストップ。まあ待ってくれ。私はセールスマンでも新聞の販売員でもない」
+　何だこいつは。ちょっとした変化球を投げてこちらの足を止めようという魂胆だろうか。だが希海とて、だてに一人暮らしを四年近くも続けてきたわけではない。
+「じゃあ何なんですか。十五秒以内に用件を言ってください。ぜろ、いち、にぃ、」
+　三。このような手合いには、こちらから時間を区切ってやるのが賢い。十五秒以内に本題が出れば「いりません」、出なければ問答無用で扉を閉める。
+「おいおい困ったな。じゃあ単刀直入に聞かせてもらおうかな」
+　四、五。そして、男は苦笑いをしながらこう告げた。
+「この部屋に、アンドロイドの女の子はいないかね」
+　希海が六秒目のカウントを口にすることはなかった。十五秒以内の本題。ある意味、思惑通りの展開である。
+「…………何のことですか？」
+　人間というものは、差し迫った状況になると意外なほど冷静になるものだ。
+「外見は中学生くらいの女の子で、身長は１５０センチほど。髪の毛は黒のロングヘア、おそらく後ろでふたつに縛ってある。アンドロイドだから、見た目は人間とほとんど変わらない」
+　間違いない、あの子のことだ。
+「中学生くらい、身長１５０センチ、黒のふたつ結び……」
+　希海は男の言葉をわざとらしく反芻し、記憶の奥底を丹念に調べ上げるふりをする。どうして女の子がここにいると分かったのか。目の前の男は何者なのか。そんなことを考えている余裕などない。希海は、今この場をやり過ごすことにすべての処理能力を注ぎ込んでいた。
+「え〜っと……。すいません、やっぱりよく分からないです。何か勘違いでもしてるんじゃないですか」
+　そんなわけだから、事情を知らない女の子が様子をうかがいに玄関までやって来ていたことに気付かなかったのも、仕方のないことだと言える。
+「なんだ。やっぱりいるじゃないか」
+　男の視線が、狭っ苦しい玄関の奥に佇む少女の姿を捉えた。
+「はぁ？　どこにいるっていうんですか……ってげっ！！」
+　振り返った希海は軽く絶望を覚える。女の子は、てっきり今でも部屋の奥のベッドに腰掛けて、物珍しそうにあたりを見回していると思っていたのに。
+「あ、すいません。遅いんで様子見に来ちゃいました」
+（このアホっ！！）
+　心のなかで叫び、睨みつけるも時すでに遅し。当の女の子は、そんな希海の絶望などどこ吹く風といった様子で、頬を赤らめ照れくさそうに笑っている。
+「あー……」
+　希海は天を仰いで次の一手に思案を巡らし始めた。
+　終わった。もはや隠しようがない。かくなる上は「私が購入したロボットです。外見が似ているのは偶然です」とでも言い張ろうか。男が何か言ってきたら知らぬ存ぜぬで通す。占有権は人民法に記された正当な権利なのだから、こちらが渡さぬと主張する以上、法的な手続きも踏まずに無理やりにこの子を奪い去ることはできないはずだ。
+（こういうの自力救済の禁止って言うのよねえ。私って物知り）
+「あれ？　私、この人見覚えがあります」
+　女の子が、スーツの男を見てぽつりと呟いた。見覚え？　まさか解体業者だろうかと希海は訝しむ。男は、そんな希海の視線になど目もくれずに、表情をかすかに曇らせた。
+「……私のことが誰だか分からないのかい？」
+　そしてそれは突然に訪れた。
+「あ、はい。すいません。ひょっとしたら前にどこかで会ったことがあるんでしょうか。見覚えは――あるんですけど――」
+　女の子の声が途切れがちになり、
+「何も――――覚えて――――――」
+　空気の抜ける音がした。
+　少女の頭が会釈でもするかのようにぐらりと傾く。電車の中で船を漕いでいる人に似た、緩慢で微睡むような動作。だが傾いた頭は再び持ち上がることなく、女の子は音を立ててその場に倒れ込んでしまう。
+「ちょっと！　大丈夫！？」
+　慌てて駆け寄った希海は、女の子を抱きかかえ肩を強くゆする。だが、少女はぐったりと目を閉じたまま、呼びかけに答えようとはしない。まるで全身の筋肉が弛緩しているようだった。女の子の体重が両の手にずしりとのしかかり、希海の中で焦燥感がどんどんと膨れ上がっていく。
+「嘘でしょ……ねえ！　ねえったら！」
+　こういうときは名前を呼ぶものだが、生憎と希海はまだこの子の名前を知らなかった。何をしても無駄な気がしたが、小さな肩を精一杯ゆすり、声を張り上げて呼びかけることしかできない。
+「待て。落ち着きたまえ」
+　不意に、背後から肩を掴まれた。そのまま強い力で少女から引き剥がされて尻餅を付いてしまう。希海には到底出し得ない男性の腕力。
+「冷媒の減少による意識障害だ。呼んでも揺すっても、意識は戻って来んよ」
+　焦りなどみじんも感じていない様子で、男は少女の脇を抱える。へたり込んだままの希海は、藁にもすがるような表情でその様子を見上げていた。
+「じゃあ……」
+　じゃあどうすればいいのか。希海の喉から出かかった言葉を先回りするかのように、男は短く、簡潔にその答えを口にした。
+「下に車を停めてある。この子を運ぶから手伝ってくれ」
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
