--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -14,156 +14,120 @@
 
   <div class="contents">
 <div class="text">
-　青山希海は、生まれも育ちも<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンだ。上新台の市立病院で生を受け、小学校は<ruby>真浜区立第六小学校<rp>《</rp><rt>ロ　ク　シ　ョ　ウ</rt><rp>》</rp></ruby>、中学校は同じく区立の<ruby>第三中学校<rp>《</rp><rt>サ　ン　チ　ュ　ウ</rt><rp>》</rp></ruby>。高校だって近所にあって実家から通っていたし、現在希海が籍を置いている真浜大学も高校と同じ敷地にある。
-「遠慮せず上がってよ。狭いところだけど」
-　乱暴に靴を脱ぎ捨て希海は言った。狭いという言葉は謙遜でも何でもなく、実際にこの玄関では二人並んで靴紐が結べそうにない。
-「あ、はい。お邪魔します」
-　女の子の言葉を背中で受け、希海は一足先に自室へと入る。このボロアパートに他人が来るのは大学に入って間もない頃に友人を呼んで以来だ。
-　最後に掃除をしたのは去年の秋ごろだったか。来客がなければ部屋はどんどん散らかっていく。放おっておくと恐ろしいことになる生ごみの類はきちんと捨てるようにしているのだが、それ以外の『腐らない』『痛まない』『匂いがしない』ものは出したら出しっぱなしである。
-　床には漫画やらゲームやら脱ぎっぱなしの服やらが所狭しと散乱しており、ベッドの周囲には新書やら小説やらが折り重なって置かれている。机の上はノートパソコンと周辺機器が綺麗に並べてあるものの、それ以外の余剰スペースには音楽CDとDVDが山積みだ。その一方でベッドの上とノートパソコン、あとゲーム機の前だけはぽっかりと人ひとり分のスペースが空いており、その散らかり具合はまさに『寝て起きてネットとゲームをすること』だけに最適化されていると言っても過言ではない。
-「あーごめんね。散らかってて。とりあえずベッドにでも座ってよ」
-　部屋の入口で固まっていた女の子を誘導し、希海はパソコンの前に座った。一人暮らしの部屋がそんなに新鮮なのか、それともあまりの散らかり具合に驚いているのか。ベッドの隅にちょこんと座った後も、女の子は物珍しそうに四方八方を見回している。
-　さて何から聞きだしたものか。
-『助けてください！』
-　希海はほんの数分前に彼女から聞いた言葉を反芻してみる。
-（そもそも、記憶喪失ってどういうことよ……）
-『私……気付いたらこの町にいて……それで』
-『どこで何をしてたか、どうしてここにいるのか、とにかく何も覚えてないんです……』
-　女の子はそう言った。最初は階段から落ちた衝撃でデータが飛んでしまったのかと思ったが、詳しく話を聞いてみるとどうもそうではないらしかった。
-『目が覚めたら、見たこともない場所にいました。暗くてじめじめしたところ……たぶん倉庫だと思います。そこには私と同じアンドロイドがたくさんいて、みんな電源が落ちたり壊れたりしていました』
-　倉庫の中にいるたくさんの壊れたアンドロイド……。おそらく、廃棄されたロボットの一時管理所だろう。つまり、この女の子は捨て犬ならぬ捨てロボットというわけだ。それなら女の子が着ている変な服も説明がつく。あの服は廃棄前のロボットに着せる、いわば死に装束のようなものなのかもしれない。
-　古くなったパソコンに服を着せて捨てたりしないのと同じで、いらなくなったロボットに服を着せようとする者などまずいない。だが、この子の場合はアンドロイドである。胸の刻印と、あといくらかの差異を除けば、その外見は人間の少女のそれとなんら変わるところはない。きめ細やかな柔肌も、小さな肩の曲線も人間と同じ。胸の膨らみだって精巧に作り込まれている。
-　そんなロボットを一糸まとわぬ姿で引き渡されれば、運搬業者も解体業者もたまったものではないだろう。相手が裸体の少女では日々の仕事もさぞやりづらいに違いない。そんなわけでアンドロイドを捨てる際には、あの簡易的な服を着せるようにしているのではないか。紙でできているのはコストを低く抑えられるのと、あと、解体の際に容易に破けるようにするためだ。
-『そこから逃げ出したことは覚えています。何かやらなきゃいけないことがあったんですけど、気付いたらここにいて、何をやろうとしていたのかも思い出せなくて……』
-　記憶喪失のロボットなんて初めて聞いた。プロセッサだかメモリだかに不具合が生じているのか、プログラムのバグなのか、それとも自分には想像も付かない難解な要因が複雑に絡み合っているのか。いずれにしても門外漢の希海には手の出しようがない問題である。
-　『そうなんだ』とか『大変だね』とか、そんな愚にもつかない言葉が喉まで出かかった瞬間、希海の脳裏を一つの映像が駆け抜けた。紙でできたぶかぶかな服。襟元からのぞく少女の白い肌と二次元コード。
-「一人で暮らしているんですか？」
-　意識が自室に連れ戻された。
-「えっ……あ、何？」
-「ここの部屋に一人で暮らしているんですか？」
-　女の子は希海の素っ頓狂な声にも怪訝そうな顔ひとつみせず、物珍しそうな表情を湛えている。
-「ああ、うん。大学の頃からね」
-「お父さんお母さんと同居しないんですか？」
-　そこはご両親と言うべきところじゃないのか、と希海は心の中で突っ込みを入れる。言語処理のいびつさがロボットらしいと言えばロボットらしかった。
-「二人ともいま海外だから」
-　たしか重慶かどこかだ。高校の頃まで暮らしていた家は引越しのときに売ってしまったので、現在希海はこの玄関の狭いボロアパートで一人暮らしをしている。
-「いいなぁ。一人暮らしって楽しそうですよね」
-　無邪気に瞳を輝かせる女の子の姿は、中学生どころか小学生に見えるほど幼い。
-「私も実際にやってみるまではそう思ってたわよ……。あ、そうだ。それよりさ。あんたのことなんだけど」
-「私……ですか？」
-　女の子は発言の意図が読み取れないかのような、ぽかんとした表情を浮かべている。
-「ちょっと……まさかさっきの話、忘れたんじゃないでしょうね」
-「ち、違いますって。ちゃんと覚えていますよ。ウェブで私の製品情報を調べてくれるんですよね」
-　そうだ。何も散らかった部屋が見せたくて彼女を自室に呼んだわけではない。この子の胸の二次元コード――いわゆるQRコードである、を携帯端末で読み取れば製造メーカーとロットナンバーくらいは知ることができるだろう。あとはホームページで連絡先を調べて、サポートセンターかどこかで色々と教えてもらえばいい。
-「じゃあこれでコード読み取ってみて」
-　端末を操作して読取画面を呼び出し、女の子に差し出す。
-「えっと、これどうやって使えばいいんですか」
-「もう読取画面は開いてるから、そのままかざせばいいだけ。あ、もしかして服脱いだほうがやりやすいかな。何なら洗面所使う？」
-　そして数分後。
-　引き戸を隔てた向こう側から声がする。
-「あっ、できましたできました」
-　ようやくか、と希海は小さくため息をついた。
-　自分の体に刻印されたコードを読み取るのがそんなに難しかったのか、それとも単にどんくさいだけなのか。『女の子がコードの読み取りに手こずっては端末がホーム画面に戻り、その度に希海がもう一度読取画面を呼び出して、再び女の子に端末を手渡す』というサイクルをふたりは既に3周も行なっていた。
-「聞いてます？　読み取れましたよ」
-「ちょ、ちょっと！　服くらい着てから出てきなさいよ！」
-　女の子が裸で洗面所から出てきた。厳密に言うと裸ではなく脱いだ服で前を隠してはいるのだが、似たようなものである。
-「だって早くしないとまた元の画面に戻っちゃうじゃないですか」
-　そもそも読み取り画面が自動で戻ってしまうのは、カメラの誤起動による電池の消耗を防ぐためだ。したがってごく普通の一般的な端末の場合、一度コードを読み取ってしまうと、ボタン操作を行わない限りは勝手に待ち受けに戻ってしまうことはない。そして希海の携帯端末も、ごくごく普通の一般的なものである。
-「大丈夫だから！　戻らないから！」
-　女の子を洗面所に押し返し、受け取った携帯端末の液晶パネルに目を落とした。製品情報はご丁寧にも中日韓越英の5ヶ国語で書かれており、希海はその中の日本語で書かれた部分に画面をスクロールさせる。
-
-　<span class="simplified">型番</span> : SUM17F4JP1698
-　<span class="simplified">制造番号</span> : 09-130221-0802-000
-　<span class="simplified">制造・贩卖</span> : <span class="simplified">上海人偶机器人工学有限公司近畿支店</span>
-　カスタマーサポート : 0120-XXX-XXX (24<span class="simplified">时间</span>)
-
-　ビンゴ。ウェブで検索するまでもなく電話番号まで載っていた。しかも、ありがたいことにフリーダイヤルである。
-「どうでしたか？」
-　服を着た女の子が洗面所から出てくる。
-「うん。とりあえず番号は手に入った。あとはここに電話すればいいんだけど……」
-　ただ、気掛かりがひとつあった。
-　この子は廃棄されかかっていたところを逃げ出してきたのだ。廃棄という言葉自体には単に『捨てる』という意味合い以上のものはないのかもしれない。だが、実際にはきちんとパーツごとに解体し、使える部品を再利用したりリサイクル業者に売ったりしているのだろう。今日び、パソコンですら内部の貴金属を再利用しているくらいだ。ましてやこの子は科学技術の粋を集めて作られたアンドロイド。その体内には金の鉱脈が縦横に走っていると言っても過言ではない。つまり廃品といっても会社にとっては一種の資産なのだ。それくらいは希海にだって容易に想像ができる。
-「あんたさ、逃げ出したことがバレたらまずいんじゃないの？」
+　人気のない静まり返った喫煙所。六畳ほどの広さのその部屋の中央には、見るも恐ろしいほどに汚れた大型の灰皿が置かれている。頭上では蛍光灯の白い光が、タールで黄ばんだ天井を照らし上げていた。
+（……もうこんな時間か）
+　希海はスボンのポケットから取り出した百円ライターでタバコに火を点ける。目を泳がせると時計の文字盤が見えた。壁に掛かった安物のアナログ式時計。その針は、あと少しで深夜の零時に差し掛かろうかというところだった。
+（帰りどうしよう。ていうかここドコなんだろ……）
+　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>《</rp><rt>ち　ゅ　う　か　ん</rt><rp>》</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
+（<ruby>暮葉<rp>《</rp><rt>くれは</rt><rp>》</rp></ruby>洞のあたりなのかな……）
+　どことも知れぬ場所の研究施設。だが、ひとつだけ希海が知っていることがある。
+　<ruby>上海人偶機器人工学<rp>《</rp><rt>Ｓ　　　　　Ｄ　　　　　Ｒ</rt><rp>》</rp></ruby><ruby>有限公司<rp>《</rp><rt>Ｃｏ．Ｌｔｄ．</rt><rp>》</rp></ruby>。
+　この研究所を所有する法人の名前だ。入り口の門に大きく名前が書かれているのを見たし、施設内でも社名の入ったポスターが貼られているのを何枚か見かけた。そして、あの子の二次元コードで見た製造情報にも、
 「あ……」
-　女の子の顔が曇る。
-「家出くらいなら、まだ叱られるだけですむんだろうけどね。あんたの場合は、逃げ出したところがスクラップ工場なわけでしょ。叱られるどころか下手すれば、っていうか確実にそのまま墓場行きよ？」
-「…………そう……ですよねやっぱり」
-　またもや女の子は困った顔で俯いてしまった。またやってしまった。希海は急いでフォローを入れようとする。
-「でも……」
-　しかし沈黙は訪れなかった。女の子は希海の目をまっすぐに見つめて、一言ずつ、自分自身に言い聞かせるように、ぽつりぽつりと言葉を紡ぎだす。
-「でも、私は……それでも構いません。私が何者だったのか……私が……今まで何をしてきたのか」
-　女の子の視線が希海に突き刺さった。
-　人と目を合わせることが苦手な希海は居心地の悪さを感じる。だが彼女の真剣な眼差しは、視線を逸らすどころか瞬きひとつ満足にさせてくれようとはしない。
-「それが知れたら私は……多分ですけど、悔いも恐れもなく死んでいけるって……そう思うんです」
-　くりっとした丸い瞳。虹を閉じ込めた瞳。身に降りかかる不幸を受け入れ、それでも自らのすべきことをひたむきに追いかけようとするその姿。女の子の目を見つめたまま、希海はその場に固まってしまっていた。
-「だから私のことは……気にしないでください。私は、私の知りたいことを……知りたいだけなんですから」
-　女の子はそう言い切ると、少し寂しそうな笑みを浮かべた。あの日自分が憧れた存在が、今まさに目の前に座っている。そんな気がした。
-　だから、希海は言いたいと思った。
-「あっ」
-　言ったところでどうなるものではない。
-「あのね……」
-　それどころか話の本筋には全く関係がない。変な奴だと思われるかもしれない。気持ちの悪い奴だと思われるかもしれない。
-「私……」
-　けれども、どうしても言いたかった。初めて出会ったロボットのこの子に。あこがれて、それでも手に入らないものを持ったこの子に。
-「私、ずっと」
-　――機械になりたかった。
-　その言葉が喉まで出掛かったそのとき、
+　タバコの灰が重力に負けて崩れ落ちた。まだろくに吸っていないというのに。「しまった勿体ない」と言わんばかりに、希海はいそいそとタバコを咥えて煙を肺に入れる。今日だけで何本のタバコを無駄に灰に変えただろう。
+（あの子、どうなったのかな……）
+　この場所に着くやいなや、女の子は数人の男達に抱えられて、どこかへ連れて行かれてしまった。一方、どうすることもできなかった希海は、ただ言われるがままに、こうして待合室で時間を潰すばかりである。
+　タバコをきっちりとフィルターまで吸いきり、吸殻を灰皿に捨てた。まずいタバコだったと希海は思う。大体タバコというものは限度をわきまえて吸うからおいしいのであって、時間潰しや口元の寂しさからスパスパ吸うタバコなんて、まずいだけで一つもいいことなどありやしない。
+　扉を開いて喫煙所から出ると、センサ式のライトが廊下を明るく照らした。飾り気のない白い壁と灰色の床。閉塞感の漂う狭い通路にはいくつもの扉が立ち並ぶ。その光景がかつて自分の居た場所を思い起こさせ、希海の心臓が小さく音を立てた。いくつかの部屋には、まだ光が灯っている。
+（やっぱり、みんなこうして遅くまで頑張ってるのかな）
+　大学でもそうだった。朝早く来て、日付が変わるまで勉強や実験。それがなくても毎週セミナーや研究状況報告の資料作成に追われるし、学会の前などはみんなして泊まりこみだ。そして研究活動に限らず世の中というものは、みんな似たようなものなのかも知れない。どこも同じように辛くて厳しいし、生半可な気持ちではやっていけないのだ。そんな事実の片鱗を見せつけられた気がして、希海はいたたまれない気持ちになる。
+　みんな、どうしてそんなに頑張れるんだろう。
+　そんな素朴な疑問が頭に浮かんだ。
+「おっ、戻ってきたのか。どこへ行ってたんだい」
+　待合室に戻ると、そこにはあの男の姿があった。男は希海の姿を確認すると、片手を上げて小さく笑みをこぼす。
+「あ、ちょっと喫煙所に……」
+「体に良くないぞ。ご存知かな？　喫煙者の発ガンリスクは」
+「そ、それよりあの子のことなんですけど」
+　喫煙者ならばこの手の話は聞き飽きている。わざわざ健康に関するご高説を聞くために、こんな場所までやってきたわけではない。
+「おっとそうだったな。と言ってもどこから話せばいいものやら」
+　それは希海も同じだった。何から聞けば良いのかわからない。男の素性。どうやって女の子の居場所を突き止めたのか。自分は何かお咎めを受けるのか。だが、目下一番気になることはというと、
+「あの子、大丈夫なんですか」
+「ああ。処置自体は一時間ちょっとで終わったし、その後の動作テストでも大きな問題はなかった」
+　よかった。希海は胸をなでおろす。あんな状況でぽっくりと逝かれては、いくら相手がロボットといえども流石に寝覚めが悪い。ちょっと変わっているところがあったけれど、いい子だった。どんな目的で作られたのかは知らないが、家政婦にせよ介護用にせよ彼女ならきっと立派な働きをするだろうと希海は思う。
+　だが、“とりあえず”助かった女の子の先に待ち構えているものが明るい未来なのかどうかは、正直なところ分からない。何せ彼女は捨てられたロボットなのだ。記憶がなかったり、突然倒れたりしたあの様子だと、どこかに不具合があるのではないだろうか。廃棄された原因も恐らくそれなのだろう。助かったは良いものの、やはり満足に仕事ができなくて解体工場行き、という可能性だって大いにありうる。
+「彼女、バグか何かでもあるんですか」
+「いや、彼女には初期不良も予期せぬ後発的トラブルも発生していないよ。ハード・ソフト共にね」
+「じゃあどうして――」
+「とりあえず座ろう。長くなりそうだしな」
+　男は希海の言葉を断ち切ると、数ある椅子の中から自分に一番近いものを選んで腰掛けた。誰もいない深夜の待合室に椅子を引きずる音が響く。
+「そうだな。じゃあまず君が――そういえばまだ名前を聞いていなかったね。私は<ruby>東<rp>《</rp><rt>あずま</rt><rp>》</rp></ruby><ruby>克祥<rp>《</rp><rt>かつひろ</rt><rp>》</rp></ruby>。ここＳＤＲ近畿支店でテクニカルサポートの責任者をしている者でね。彼女のこともよく知っているよ。ところで、君の名前は？」
+「青山希海です」
+「青山君か。大学生かね？」
+「いちおう……」
+　実際に学籍は存在するのだから、一応も何もれっきとした学生である。だが、もう長いこと学校に行ってない人間が大学生を名乗ることに、希海は何だか後ろめたいものを感じてしまい、かといって「不登校の引きこもりです」と正直に言うわけにもいかず、これらの葛藤が一応という言葉に表れている。
+「なるほど。大学では何を勉強しているのかな」
+「お、<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を…………」
+「ほう」
+　希海の表情が少しだけ引きつった。だが、対する男――東は興味津々といった感じで目を輝かせる。
+「なるほど。<ruby>近畿直轄市<rp>《</rp><rt>こ　の　あ　た　り</rt><rp>》</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
+「そんなことより、あ、あの子の話をですね！」
+「おっといかんいかん。私の悪い癖でね。いつも話を脱線させてしまうんだ。ええっと何の話だっけな……」
+　知るか。お前が何か言いかけたんだろう。何もないテーブルの上を見つめながら希海は心中で毒づく。
+「そうだそうだ。まずは君が彼女について知っている話を聞かせてもらいたいと思ったんだ。君の持っている情報を把握すれば、こちらも話がしやすくなるだろう？」
+　東は完全に打ち解けてしまったという様子で笑顔を見せる。だが一方の希海はその軽薄さに不信感を募らせるばかりだ。
+「え、えっと……。ここの会社のアンドロイドで、記憶喪失っぽい感じになってて、廃棄されて逃げ出してきたみたいってことくらいです。私があの子について知ってるのは」
+　なんとも頭の悪そうなセリフだと希海は思った。『記憶喪失っぽい感じ』など、まるで女子高生の言い草である。ほかにいくらでもあるだろうに、よりにもよってこんな言い回しを選んでしまうなんて。クールに振る舞えない自分が嫌になる。
+「ふむ……」
+　東は小さく頷き、何かを考える様子で右手を顎に当てる。どういう順番で話をすべきか考えているのだろう。
+「なるほど。じゃあまず君の挙げた三点について、こちらから補足をしておこう。まず一つ目」
+　そう言って東は人差し指をぴんと立てる。
+「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>《</rp><rt>Ｓ　　　　　Ｄ　　　　　Ｒ</rt><rp>》</rp></ruby>サマリー１７シリーズ第４世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>《</rp><rt>Ｇ　　Ｐ　　Ｓ</rt><rp>》</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
+　やはりＧＰＳか。希海の想像していた通りである。女の子と会ってから、ものの一時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
+「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>ＦＩＡＮＣ<rp>《</rp><rt>フ　ァ　イ　ア　ン　ク</rt><rp>》</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>《</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>》</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>《</rp><rt>ニューラル</rt><rp>》</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>《</rp><rt>エンタングルメント</rt><rp>》</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>《</rp><rt>コヒーレンス</rt><rp>》</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>《</rp><rt>デコヒーレンス</rt><rp>》</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
+　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
+「少し専門的になってしまったが、大丈夫かな？」
+　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
+「えっとつまり、逃げ出したあの子がメンテも受けずにふらふらほっつき歩いていたから、記憶を失ったり、意識が途切れたりしたってことですよね？」
+「まあそういうことだな。今日、おっともう昨日か。昨日、彼女をここに運び込んでから真っ先に冷媒の補充をやったんだが、もうすっからかんだったよ。あと1日2日遅かったら、彼女のデータは完全に飛んでしまっていただろうね」
+　1日2日という具体性を帯びた言葉に希海の背筋が少しだけ寒くなる。この男が来なければ、意識を失った女の子の処置を自分一人でしなければならなかったかもしれないのだ。もしそうなっていたら、希海には何ができただろう。慌てふためくだけで、彼女の脳死を待つしかできなかったのかもしれないし、案外、サービスセンターにでも電話を掛けて判断を仰ぐくらいはできたのかもしれない。いずれにせよ、そういう事態にならなかった自らの幸運に感謝するのみだ。現実に目の前の男が希海の家を訪ねてきて、女の子が大事に至ることはなかったのだから。
+「けっこう危なかったんですね……。でもよかったです。あの子、完全に治ったんですよね？」
+「それについてだが……治ったとも言えるし、治っていないとも言える」
+　軽い気持ちで投げかけた質問の答えは予想外のものだった。希海の顔が思わず曇る。それまでの東の口ぶりには楽天的な色が漂っていたし、表情にも別段暗いものは見られなかったから油断をしていた。
+「ああ、勘違いしないでくれ。彼女の意識はちゃんと戻ったし、活動維持に必要な部位にも目立った損傷は見られなかった。きちんと定期的にメンテを受けるようにすれば、これからも問題なく動作させることができるよ。だが消えてしまった記憶だけは修復のしようがないんだ。そういう意味では完治とは言えない、ということだよ」
+　確かに高々数年間の記憶である。しかもアンドロイドの記憶など、大部分が寝て起きて仕事をして、の繰り返しだ。彼女には、思い出すたびに胸が締め付けられるような挫折も、学校帰りに好きな人と一緒に見た夕焼けの記憶も、駆けっこで一番になった思い出もないのだろう。あと数日遅ければそのまま壊れてしまていたかもしれないことを考えれば、後遺症が残らなかっただけ御の字だと思う。
+　――私は、それでも構いません
+　だが、あのときの彼女の言葉が、
+　――私が何者だったのか、私が今まで何をしてきたのか
+　すべてを悟ったような表情が、
+　――それが知れたら私は悔いも恐れもなく死んでいけるって
+　虹を閉じ込めた瞳が、どうしても希海には忘れられなかった。無くしてしまった記憶は大したものじゃないのかもしれないけれど、それでも、やはり彼女にとっては大切な思い出なのだ。記憶が戻らないと知ったら、あの子はどんな顔するのだろう。
+「そういえば、あの子って昔はどこで何をしていたんですか？」
+　誰だって、何かしら社会と関わりあいながら生きている。サバンナの真ん中でシマウマを狩って暮らしているならまだしも、普通に生きていれば、その人の生い立ちや歩んできた軌跡が何らかのデータとなって残っているはずだ。
+　そしてそれはロボットも同じである。むしろ生産から出荷まで、すべての工程に企業が関わっているロボットの方が、そういったデータは残りやすいに違いない。あの子の場合は定期的なメンテナンスが必要だという話もあったし、ひょっとするとクライアントに引き渡された後の情報だって会社に残っている可能性もある。
+「そうだな、じゃあ最後。三つ目についての話をしようか」
+　東の表情から、感情の色が消えた気がした。
+「まず、彼女の欠落した記憶についてだ。これについては顧客のプライバシーにも関わってくる話だから他言は厳禁だ。分かったね」
+　希海は無言で頷いた。
+　これから真実が明かされる。氷が割れて巨大なクレバスが出現するのだ。そこを覗き込めば、長いあいだ陽の目を見ることのなかった何かがあるに違いない。
+「ハルカ」
+　東は、やおら目を瞑って一つの名前を呟いた。
+「彼女がかつての主人からもらった名前だ」
 
-　不意に呼び鈴が鳴った。
-「あ、お客さんですよ」
-　女の子の表情が無邪気な少女のそれに戻る。
-　人が大事な話をしようとしているときに一体誰だ。希海は心の中で毒づきながらも、しぶしぶ玄関へと足を運ぶ。恋人も友達も居ない一人暮らしの大学生にとって、来客者とは訪問販売のセールスマンか国営放送の料金徴収と相場は決まっている。受信料はこの間払ったはずだから訪問販売だろうか。
-「……はい」
-　扉を開けるとスーツ姿の見知らぬ中年男性が立っていた。案の定である。
-「いま取り込み中なんで後にしてもらえますか」
-　希海は相手の姿を確認するやいなや先制攻撃を仕掛ける。この手の訪問販売には有無を言わさずに帰ってもらうのが最善の戦法だ。情けは無用。少しでも隙を見せたら、延々とセースルトークを聞かされるはめになる。
-「ストップ。まあ待ってくれ。私はセールスマンでも新聞の販売員でもない」
-　何だこいつは。ちょっとした変化球を投げてこちらの足を止めようという魂胆だろうか。だが希海とて、だてに一人暮らしを4年近くも続けてきたわけではない。
-「じゃあ何なんですか。15秒以内に用件を言ってください。ぜろ、いち、にぃ、」
-　3。このような手合いには、こちらから時間を区切ってやるのが賢い。15秒以内に本題が出れば「いりません」、出なければ問答無用で扉を閉める。
-「おいおい困ったな。じゃあ単刀直入に聞かせてもらおうかな」
-　4、5。そして、男は苦笑いをしながらこう告げた。
-「この部屋に、アンドロイドの女の子はいないかね」
-　希海が6秒目のカウントを口にすることはなかった。15秒以内の本題。ある意味、思惑通りの展開である。
-「…………何のことですか？」
-　人間というものは、差し迫った状況になると意外なほど冷静になるものだ。
-「外見は中学生くらいの女の子で、身長は150cmほど。髪の毛は黒のロングヘア、おそらく後ろで2つに縛ってある。アンドロイドだから、見た目は人間とほとんど変わらない」
-　間違いない、あの子のことだ。
-「中学生くらい、身長150センチ、黒の二つ結び……」
-　希海は男の言葉をわざとらしく反芻し、記憶の奥底を丹念に調べ上げるふりをする。どうして女の子がここにいると分かったのか。目の前の男は何者なのか。そんなことを考えている余裕などない。希海は、今この場をやり過ごすことにすべての処理能力を注ぎ込んでいた。
-「え〜っと……。すいません、やっぱりよく分からないです。何か勘違いでもしてるんじゃないですか」
-　そんなわけだから、事情を知らない女の子が様子をうかがいに玄関までやって来ていたことに気付かなかったのも、仕方のないことだと言える。
-「なんだ。やっぱりいるじゃないか」
-　男の視線が、狭っ苦しい玄関の奥に佇む少女の姿を捉えた。
-「はぁ？　どこにいるっていうんですか……ってげっ！！」
-　振り返った希海は軽く絶望を覚える。女の子は、てっきり今でも部屋の奥のベッドに腰掛けて、物珍しそうにあたりを見回していると思っていたのに。
-「あ、すいません。遅いんで様子見に来ちゃいました」
-（このアホっ！！）
-　心のなかで叫び、睨みつけるも時すでに遅し。当の女の子は、そんな希海の絶望などどこ吹く風といった様子で、頬を赤らめ照れくさそうに笑っている。
-「あー……」
-　希海は天を仰いで次の一手に思案を巡らし始めた。
-　終わった。もはや隠しようがない。かくなる上は「私が購入したロボットです。外見が似ているのは偶然です」とでも言い張ろうか。男が何か言ってきたら知らぬ存ぜぬで通す。占有権は人民法に記された正当な権利なのだから、こちらが渡さぬと主張する以上、法的な手続きも踏まずに無理やりにこの子を奪い去ることはできないはずだ。
-（こういうの自力救済の禁止って言うのよねえ。私って物知り）
-「あれ？　私、この人見覚えがあります」
-　女の子が、スーツの男を見てぽつりと呟いた。見覚え？　まさか解体業者だろうかと希海は訝しむ。男は、そんな希海の視線になど目もくれずに、表情をかすかに曇らせた。
-「……私のことが誰だか分からないのかい？」
-　そしてそれは突然に訪れた。
-「あ、はい。すいません。ひょっとしたら前にどこかで会ったことがあるんでしょうか。見覚えは――あるんですけど――」
-　女の子の声が途切れがちになり、
-「何も――――覚えて――――――」
-　空気の抜ける音がした。
-　少女の頭が会釈でもするかのようにぐらりと傾く。電車の中で船を漕いでいる人に似た、緩慢で微睡むような動作。だが傾いた頭は再び持ち上がることなく、女の子は音を立ててその場に倒れ込んでしまう。
-「ちょっと！　大丈夫！？」
-　慌てて駆け寄った希海は、女の子を抱きかかえ肩を強くゆする。だが、少女はぐったりと目を閉じたまま、呼びかけに答えようとはしない。まるで全身の筋肉が弛緩しているようだった。女の子の体重が両の手にずしりとのしかかり、希海の中で焦燥感がどんどんと膨れ上がっていく。
-「嘘でしょ……ねえ！　ねえったら！」
-　こういうときは名前を呼ぶものだが、生憎と希海はまだこの子の名前を知らなかった。何をしても無駄な気がしたが、小さな肩を精一杯ゆすり、声を張り上げて呼びかけることしかできない。
-「待て。落ち着きたまえ」
-　不意に、背後から肩を掴まれた。そのまま強い力で少女から引き剥がされて尻餅を付いてしまう。希海には到底出し得ない男性の腕力。
-「冷媒の減少による意識障害だ。呼んでも揺すっても、意識は戻って来んよ」
-　焦りなどみじんも感じていない様子で、男は少女の脇を抱える。へたり込んだままの希海は、藁にもすがるような表情でその様子を見上げていた。
-「じゃあ……」
-　じゃあどうすればいいのか。希海の喉から出かかった言葉を先回りするかのように、男は短く、簡潔にその答えを口にした。
-「下に車を停めてある。この子を運ぶから手伝ってくれ」
+　ハルカが出荷されたのは、今からもう2年も前になる。
+　購入者は七園区に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
+　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してＳＤＲはオーナーとなる人間の身辺調査を行なっているからだ。
+　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
+　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、ＳＤＲは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
+　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。このようなアンドロイドにまつわる様々な問題は世界規模で発生しており、先進国を中心に規制の強化が叫ばれている状況だ。
+　アジア屈指のアンドロイドメーカーであり常に批判の矢面に立たされてきたＳＤＲも近頃はそういった評判を気にしてか、つい数年前に新たな自主規制を導入した。それが「アンドロイド利用に関する倫理規定」である。規定には性行為の強要や犯罪用途への利用など、アンドロイドの利用に際して行ってはならない行為が事細かに定められており、オーナーは契約締結時にこの規定を順守する旨の誓約書を提出しなければならない。
+　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「大丈夫だろう」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
+　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
+　自殺だった。
+　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは1ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
+　東もＳＤＲの関係者として現場の写真を見せてもらったのだが、あの光景はおそらく一生忘れることがないだろう。腐敗した遺体に寄り添って、あどけない顔のアンドロイドが事切れていたのだ。
+　良く知った顔だった。主人が忙しいからとひとりでメンテナンスにやってきては、今日はどんな料理を作っただの、どんな話をしただの、楽しそうに話していたあのアンドロイド。彼女や彼女の同型機が幼いのはまだ精神が発達段階であるためで、いわば仕様とも言えるのだが、そのこと差し引いてもハルカはまるで小さな子供のようだった。子供のように一日一日を大切に生きていたと東は思う。
+　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、アンドロイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
+　人工チューブラルが形作る大規模ニューラルネットはあまりにも複雑だ。あの表情を再現する出力信号は容易に作り出せるのかもしれないが、その背後にある心理作用を厳密に解析することは不可能に近い。
+　だからあの日、ハルカが何を考え、何を感じていたのかは、もはや誰にも分かりはしない。分かりはしないが、想像し、祈ることくらいはできるだろう。
+　――願わくば彼女が安らかな心持ちで眠りにつかんことを。
+　普段は神仏など信じない東だが、このときばかりはそう祈らずにはいられなかった。
+　その後、数日の時を経てハルカの廃棄が決定した。
+　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>《</rp><rt>ひとふさ</rt><rp>》</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
+　そして、それからさらに数日後。
+　「廃品置き場からハルカが居なくなった」という報告を部下から受けたとき、東は耳を疑った。機能を停止したと思っていたロボットが蘇りひとりでに歩き出したというのでは、まるでゾンビではないか。最初は誰かが勝手にどこかへ移動させたのだと思い、廃品置き場をくまなく探したが一向に見つからない。
+　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台2丁目。事業所から直線距離にして6kmほど離れた場所である。
+　東は情報端末を片手に大慌てで車を出した。停止したFIANCの自発的再起動。聞いたことがないわけではなかったが、東とて数本の論文に引用されているのを見たことがある程度で、今の今まですっかり頭から抜けていた。実際に自分が出くわさなければ二度と思い出すこともなかっただろう。それくらい例外的な現象だ。
+　東がGPSの位置情報を頼りにたどり着いたのは3階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、1階は無人、2階には40代の中年男性、3階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
