--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -14,120 +14,117 @@
 
   <div class="contents">
 <div class="text">
-　人気のない静まり返った喫煙所。六畳ほどの広さのその部屋の中央には、見るも恐ろしいほどに汚れた大型の灰皿が置かれている。頭上では蛍光灯の白い光が、タールで黄ばんだ天井を照らし上げていた。
-（……もうこんな時間か）
-　希海はスボンのポケットから取り出した百円ライターでタバコに火を点ける。目を泳がせると時計の文字盤が見えた。壁に掛かった安物のアナログ式時計。その針は、あと少しで深夜0時に差し掛かろうかというところだった。
-（帰りどうしよう。ていうかここドコなんだろ……）
-　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>《</rp><rt>ちゅうかん</rt><rp>》</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
-（暮葉洞のあたりなのかな……）
-　どことも知れぬ場所の研究施設。だが、ひとつだけ希海が知っていることがある。
-　<ruby>上海人偶機器人工学<rp>《</rp><rt>　　S　　　　D　　　　R　　</rt><rp>》</rp></ruby><ruby>有限公司<rp>《</rp><rt>Co.Ltd.</rt><rp>》</rp></ruby>。
-　この研究所を所有する法人の名前だ。入り口の門に大きく名前が書かれているのを見たし、施設内でも社名の入ったポスターが貼られているのを何枚か見かけた。そして、あの子の二次元コードで見た製造情報にも、
-「あ……」
-　タバコの灰が重力に負けて崩れ落ちた。まだろくに吸っていないというのに。「しまった勿体ない」と言わんばかりに、希海はいそいそとタバコを咥えて煙を肺に入れる。今日だけで何本のタバコを無駄に灰に変えただろう。
-（あの子、どうなったのかな……）
-　この場所に着くやいなや、女の子は数人の男達に抱えられて、どこかへ連れて行かれてしまった。一方、どうすることもできなかった希海は、ただ言われるがままに、こうして待合室で時間を潰すばかりである。
-　タバコをきっちりとフィルターまで吸いきり、吸殻を灰皿に捨てた。まずいタバコだったと希海は思う。大体タバコというものは限度をわきまえて吸うからおいしいのであって、時間潰しや口元の寂しさからスパスパ吸うタバコなんて、まずいだけで一つもいいことなどありやしない。
-　扉を開いて喫煙所から出ると、センサ式のライトが廊下を明るく照らした。飾り気のない白い壁と灰色の床。閉塞感の漂う狭い通路にはいくつもの扉が立ち並ぶ。その光景がかつて自分の居た場所を思い起こさせ、希海の心臓が小さく音を立てた。いくつかの部屋には、まだ光が灯っている。
-（やっぱり、みんなこうして遅くまで頑張ってるのかな）
-　大学でもそうだった。朝早く来て、日付が変わるまで勉強や実験。それがなくても毎週セミナーや研究状況報告の資料作成に追われるし、学会の前などはみんなして泊まりこみだ。そして研究活動に限らず世の中というものは、みんな似たようなものなのかも知れない。どこも同じように辛くて厳しいし、生半可な気持ちではやっていけないのだ。そんな事実の片鱗を見せつけられた気がして、希海はいたたまれない気持ちになる。
-　みんな、どうしてそんなに頑張れるんだろう。
-　そんな素朴な疑問が頭に浮かんだ。
-「おっ、戻ってきたのか。どこへ行ってたんだい」
-　待合室に戻ると、そこにはあの男の姿があった。男は希海の姿を確認すると、片手を上げて小さく笑みをこぼす。
-「あ、ちょっと喫煙所に……」
-「体に良くないぞ。ご存知かな？　喫煙者の発ガンリスクは」
-「そ、それよりあの子のことなんですけど」
-　喫煙者ならばこの手の話は聞き飽きている。わざわざ健康に関するご高説を聞くために、こんな場所までやってきたわけではない。
-「おっとそうだったな。と言ってもどこから話せばいいものやら」
-　それは希海も同じだった。何から聞けば良いのかわからない。男の素性。どうやって女の子の居場所を突き止めたのか。自分は何かお咎めを受けるのか。だが、目下一番気になることはというと、
-「あの子、大丈夫なんですか」
-「ああ。処置自体は一時間ちょっとで終わったし、その後の動作テストでも大きな問題はなかった」
-　よかった。希海は胸をなでおろす。あんな状況でぽっくりと逝かれては、いくら相手がロボットといえども流石に寝覚めが悪い。ちょっと変わっているところがあったけれど、いい子だった。どんな目的で作られたのかは知らないが、家政婦にせよ介護用にせよ彼女ならきっと立派な働きをするだろうと希海は思う。
-　だが、“とりあえず”助かった女の子の先に待ち構えているものが明るい未来なのかどうかは、正直なところ分からない。何せ彼女は捨てられたロボットなのだ。記憶がなかったり、突然倒れたりしたあの様子だと、どこかに不具合があるのではないだろうか。廃棄された原因も恐らくそれなのだろう。助かったは良いものの、やはり満足に仕事ができなくて解体工場行き、という可能性だって大いにありうる。
-「彼女、バグか何かでもあるんですか」
-「いや、彼女には初期不良も予期せぬ後発的トラブルも発生していないよ。ハード・ソフト共にね」
-「じゃあどうして――」
-「とりあえず座ろう。長くなりそうだしな」
-　男は希海の言葉を断ち切ると、数ある椅子の中から自分に一番近いものを選んで腰掛けた。誰もいない深夜の待合室に椅子を引きずる音が響く。
-「そうだな。じゃあまず君が――そういえばまだ名前を聞いていなかったね。私は<ruby>東<rp>《</rp><rt>あずま</rt><rp>》</rp></ruby><ruby>克祥<rp>《</rp><rt>かつひろ</rt><rp>》</rp></ruby>。ここSDR近畿支店でテクニカルサポートの責任者をしている者でね。彼女のこともよく知っているよ。ところで、君の名前は？」
-「青山希海です」
-「青山君か。大学生かね？」
-「いちおう……」
-　実際に学籍は存在するのだから、一応も何もれっきとした学生である。だが、もう長いこと学校に行ってない人間が大学生を名乗ることに、希海は何だか後ろめたいものを感じてしまい、かといって「不登校の引きこもりです」と正直に言うわけにもいかず、これらの葛藤が一応という言葉に表れている。
-「なるほど。大学では何を勉強しているのかな」
-「お、<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を…………」
-「ほう」
-　希海の表情が少しだけ引きつった。だが、対する男――東は興味津々といった感じで目を輝かせる。
-「なるほど。<ruby>近畿直轄市<rp>《</rp><rt>こ　の　あ　た　り</rt><rp>》</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
-「そんなことより、あ、あの子の話をですね！」
-「おっといかんいかん。私の悪い癖でね。いつも話を脱線させてしまうんだ。ええっと何の話だっけな……」
-　知るか。お前が何か言いかけたんだろう。何もないテーブルの上を見つめながら希海は心中で毒づく。
-「そうだそうだ。まずは君が彼女について知っている話を聞かせてもらいたいと思ったんだ。君の持っている情報を把握すれば、こちらも話がしやすくなるだろう？」
-　東は完全に打ち解けてしまったという様子で笑顔を見せる。だが一方の希海はその軽薄さに不信感を募らせるばかりだ。
-「え、えっと……。ここの会社のアンドロイドで、記憶喪失っぽい感じになってて、廃棄されて逃げ出してきたみたいってことくらいです。私があの子について知ってるのは」
-　なんとも頭の悪そうなセリフだと希海は思った。「記憶喪失っぽい感じ」など、まるで女子高生の言い草である。ほかにいくらでもあるだろうに、よりにもよってこんな言い回しを選んでしまうなんて。クールに振る舞えない自分が嫌になる。
-「ふむ……」
-　東は小さく頷き、何かを考える様子で右手を顎に当てる。どういう順番で話をすべきか考えているのだろう。
-「なるほど。じゃあまず君の挙げた三点について、こちらから補足をしておこう。まず一つ目」
-　そう言って東は人差し指をぴんと立てる。
-「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>《</rp><rt>　　S　　　　D　　　　R　　</rt><rp>》</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>《</rp><rt>GPS</rt><rp>》</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
-　やはりGPSか。希海の想像していた通りである。女の子と会ってから、ものの1時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
-「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>《</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>》</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>《</rp><rt>ニューラル</rt><rp>》</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>《</rp><rt>エンタングルメント</rt><rp>》</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>《</rp><rt>コヒーレンス</rt><rp>》</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>《</rp><rt>デコヒーレンス</rt><rp>》</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
-　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
-「少し専門的になってしまったが、大丈夫かな？」
-　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
-「えっとつまり、逃げ出したあの子がメンテも受けずにふらふらほっつき歩いていたから、記憶を失ったり、意識が途切れたりしたってことですよね？」
-「まあそういうことだな。今日、おっともう昨日か。昨日、彼女をここに運び込んでから真っ先に冷媒の補充をやったんだが、もうすっからかんだったよ。あと1日2日遅かったら、彼女のデータは完全に飛んでしまっていただろうね」
-　1日2日という具体性を帯びた言葉に希海の背筋が少しだけ寒くなる。この男が来なければ、意識を失った女の子の処置を自分一人でしなければならなかったかもしれないのだ。もしそうなっていたら、希海には何ができただろう。慌てふためくだけで、彼女の脳死を待つしかできなかったのかもしれないし、案外、サービスセンターにでも電話を掛けて判断を仰ぐくらいはできたのかもしれない。いずれにせよ、そういう事態にならなかった自らの幸運に感謝するのみだ。現実に目の前の男が希海の家を訪ねてきて、女の子が大事に至ることはなかったのだから。
-「けっこう危なかったんですね……。でもよかったです。あの子、完全に治ったんですよね？」
-「それについてだが……治ったとも言えるし、治っていないとも言える」
-　軽い気持ちで投げかけた質問の答えは予想外のものだった。希海の顔が思わず曇る。それまでの東の口ぶりには楽天的な色が漂っていたし、表情にも別段暗いものは見られなかったから油断をしていた。
-「ああ、勘違いしないでくれ。彼女の意識はちゃんと戻ったし、活動維持に必要な部位にも目立った損傷は見られなかった。きちんと定期的にメンテを受けるようにすれば、これからも問題なく動作させることができるよ。だが消えてしまった記憶だけは修復のしようがないんだ。そういう意味では完治とは言えない、ということだよ」
-　確かに高々数年間の記憶である。しかもアンドロイドの記憶など、大部分が寝て起きて仕事をして、の繰り返しだ。彼女には、思い出すたびに胸が締め付けられるような挫折も、学校帰りに好きな人と一緒に見た夕焼けの記憶も、駆けっこで一番になった思い出もないのだろう。あと数日遅ければそのまま壊れてしまていたかもしれないことを考えれば、後遺症が残らなかっただけ御の字だと思う。
+　重い話になってしまったことだし少し休憩でもしようか。東はそう言いって席を立つと、希海を残してどこかへ行ってしまった。
+「ふぅ」
+　ゆっくりと紫煙を吐き出し、ヤニで黄ばんだ天井を仰いだ。希海は、再び喫煙所までタバコを吸いに来ている。
+　一度に色んな話を聞きすぎて頭が付いていっていなかった。もちろん。話の内容は理解できるのだが、その中の情報ひとつひとつを精査することがどうしてもできない。
+　壁の時計を見ると、時刻は深夜の1時半。無理もないかと希海は思う。ただでさえ今日は早起きだったのに、もうこんな時間だ。心身ともにすっかり疲れてしまっている。帰ったら軽く10時間は寝てしまうだろう。下手したらそれ以上もありうる。早朝立てた早寝早起きという目標は、早くも達成が困難になりつつあった。
+「…………」
+　希海はぼんやりとタバコから立ち上がる煙を見つめている。絶え間なく立ち上っては渦を巻いて拡散していく煙。その流れは決して定常ではなく、大きく揺らいでは静かに流れ、また揺らいでは静かに流れてを不規則に繰り返している。
+（ハルカ……、か）
+　あの少女が失っていた記憶。想像していたのよりもずっと深刻な話だった。ロボットである彼女にとって、主人との絆こそが世界のすべてだったのだろうと希海は思う。
+　ちょうど犬や猫と同じだ。大好きな主人のために働いて、大好きな主人と話をして、褒められると天にも登れるくらい嬉しくて。彼女のオーナーは多忙な人だったらしいので、一日にできる会話なんてたかが知れていただろう。それでも彼女は彼との会話に生涯の喜びのすべてを見出していたに違いない。そうでなければ、遺体に寄り添ったまま自らの死を待ったりはしないはずだ。
+　そしてある朝、彼女が目を覚ますと、その大好きだった人が冷たくなっていたのである。そのときの様子を考えると、希海の胸はいっそう強く締め付けられた。
+　彼女は……、ハルカはそのときどうしたのだろう。作り物の涙を流して子供のように泣いたのだろうか。それとも、冷たくなった主人の姿を無表情に眺めながら、プロセッサを必死に動かしていたのだろうか。いずれにせよ悲しい光景だと希海は思う。
+（あの子、これからどうなるのかな……）
+　機能に問題はないという話だったので、また新しい主人のもとで第二の人生を送ることになるのだろうか。それならば記憶を失ったのはある意味、幸せなのかもしれない。自分が彼女の様な体験をすればもう二度と立ち直れないだろうし、仮に立ち直れても一生トラウマを引きずって生きていくことになるに違いない。自らの歩みを止めてしまうような記憶は、綺麗に忘れてしまった方が当人のためだ。
+　でも、
 　――私は、それでも構いません
-　だが、あのときの彼女の言葉が、
-　――私が何者だったのか、私が今まで何をしてきたのか
-　すべてを悟ったような表情が、
-　――それが知れたら私は悔いも恐れもなく死んでいけるって
-　虹を閉じ込めた瞳が、どうしても希海には忘れられなかった。無くしてしまった記憶は大したものじゃないのかもしれないけれど、それでも、やはり彼女にとっては大切な思い出なのだ。記憶が戻らないと知ったら、あの子はどんな顔するのだろう。
-「そういえば、あの子って昔はどこで何をしていたんですか？」
-　誰だって、何かしら社会と関わりあいながら生きている。サバンナの真ん中でシマウマを狩って暮らしているならまだしも、普通に生きていれば、その人の生い立ちや歩んできた軌跡が何らかのデータとなって残っているはずだ。
-　そしてそれはロボットも同じである。むしろ生産から出荷まで、すべての工程に企業が関わっているロボットの方が、そういったデータは残りやすいに違いない。あの子の場合は定期的なメンテナンスが必要だという話もあったし、ひょっとするとクライアントに引き渡された後の情報だって会社に残っている可能性もある。
-「そうだな、じゃあ最後。三つ目についての話をしようか」
-　東の表情から、感情の色が消えた気がした。
-「まず、彼女の欠落した記憶についてだ。これについては顧客のプライバシーにも関わってくる話だから他言は厳禁だ。分かったね」
-　希海は無言で頷いた。
-　これから真実が明かされる。氷が割れて巨大なクレバスが出現するのだ。そこを覗き込めば、長いあいだ陽の目を見ることのなかった何かがあるに違いない。
-「ハルカ」
-　東は、やおら目を瞑って一つの名前を呟いた。
-「彼女がかつての主人からもらった名前だ」
-
-　ハルカが出荷されたのは、今からもう2年も前になる。
-　購入者は七園区に住む50代の男性。とある中小企業の経営者で、3人居た子供は全員が就職に伴って実家を巣立ち、夫婦2人で悠々自適に暮らしていた。彼がアンドロイドを買ったのは自分が使うためではなく、仕事が忙しくろくに家事をする暇もない次男へのプレゼントである。
-　どうしてそんなことまで東が知っているのかというと、アンドロイドの購入に際してSDRはオーナーとなる人間の身辺調査を行なっているからだ。
-　アンドロイドというものはかなり高額で、高級外車が1台買えてしまうくらいの値段である。ローンを組む人だって少なくはない。そんなわけでクライアントの債務能力の査定をする必要があるのだが、身辺調査の最も大きな目的はこれとは別にある。それは、オーナーがアンドロイドを正しく利用するのかという点の見極めだ。
-　よく知られている通り、アンドロイドとは人間を模すことを最大の目的として設計されている。どれくらい人間を模すかは企業や製品によってまちまちだが、SDRは特にその傾向が強く、サマリー17シリーズなどはじっくりと観察でもしなければ容易にロボットだとは分からない。それだけ人間に似ているのだから、アンドロイドを使って良からぬことを企む輩も当然、少なからず出てくる。
-　代表的な例が、アンドロイドに対する性行為の強要だ。オーナー自身による暴行から、第三者に対する売春行為の強要まで含めると、それこそ数えきれないほどの件数が世界中で報告されている。また、アンドロイドを犯罪に利用するケースもこれに負けじと多い。軽微なものでは万引きや賭博現場の見張り程度なのだが、深刻なものになると、過去にはロボットを使った法廷での偽証事件すら起きている。このようなアンドロイドにまつわる様々な問題は世界規模で発生しており、先進国を中心に規制の強化が叫ばれている状況だ。
-　アジア屈指のアンドロイドメーカーであり常に批判の矢面に立たされてきたSDRも近頃はそういった評判を気にしてか、つい数年前に新たな自主規制を導入した。それが「アンドロイド利用に関する倫理規定」である。規定には性行為の強要や犯罪用途への利用など、アンドロイドの利用に際して行ってはならない行為が事細かに定められており、オーナーは契約締結時にこの規定を順守する旨の誓約書を提出しなければならない。
-　もちろん、クライアントはこの誓約書にしっかりとサインをした。仕事で忙しかったはずの息子のサインがあるのは、父親が彼のアパートまでサインをもらいに行ったのだろう。几帳面な彼らの様子に、契約担当者は「大丈夫だろう」と思ったに違いない。実際、身辺調査では大きな問題は散見されなかったし、彼らが倫理規定に違反したいう事実は今日においても確認されていない。
-　そして東が第一報を聞いたのは、つい1週間ほど前のことだ。
-　自殺だった。
-　長い間連絡が取れないことを不審に思った父親が、息子のアパートを尋ねたところを発見した。警察の鑑定によると死亡したのは1ヶ月ほど前。方法はドアノブとタオルを使った首吊りで、遺書は見つからなかったという。自殺の原因は今も不明だが、両親は仕事での過労が原因とみて、息子が務めていた会社を相手に訴訟を起こすつもりらしい。
-　東もSDRの関係者として現場の写真を見せてもらったのだが、あの光景はおそらく一生忘れることがないだろう。腐敗した遺体に寄り添って、あどけない顔のアンドロイドが事切れていたのだ。
-　良く知った顔だった。主人が忙しいからとひとりでメンテナンスにやってきては、今日はどんな料理を作っただの、どんな話をしただの、楽しそうに話していたあのアンドロイド。彼女や彼女の同型機が幼いのはまだ精神が発達段階であるためで、いわば仕様とも言えるのだが、そのこと差し引いてもハルカはまるで小さな子供のようだった。子供のように一日一日を大切に生きていたと東は思う。
-　だが、腐敗した遺体に寄り添う彼女の表情からは、そんな幼さなどみじんも感じられなかった。すべてを悟ったような穏やかな顔。想定年齢や稼動時間の多寡に関わらず、アンドロイドはときどきこういう表情をすることがある。その向こう側で彼らが何を考え、何を感じているのかを東は知らない。恐らく知る術などないのだろう。
-　人工チューブラルが形作る大規模ニューラルネットはあまりにも複雑だ。あの表情を再現する出力信号は容易に作り出せるのかもしれないが、その背後にある心理作用を厳密に解析することは不可能に近い。
-　だからあの日、ハルカが何を考え、何を感じていたのかは、もはや誰にも分かりはしない。分かりはしないが、想像し、祈ることくらいはできるだろう。
-　――願わくば彼女が安らかな心持ちで眠りにつかんことを。
-　普段は神仏など信じない東だが、このときばかりはそう祈らずにはいられなかった。
-　その後、数日の時を経てハルカの廃棄が決定した。
-　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>《</rp><rt>ひとふさ</rt><rp>》</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
-　そして、それからさらに数日後。
-　「廃品置き場からハルカが居なくなった」という報告を部下から受けたとき、東は耳を疑った。機能を停止したと思っていたロボットが蘇りひとりでに歩き出したというのでは、まるでゾンビではないか。最初は誰かが勝手にどこかへ移動させたのだと思い、廃品置き場をくまなく探したが一向に見つからない。
-　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台2丁目。事業所から直線距離にして6kmほど離れた場所である。
-　東は情報端末を片手に大慌てで車を出した。停止したFIANCの自発的再起動。聞いたことがないわけではなかったが、東とて数本の論文に引用されているのを見たことがある程度で、今の今まですっかり頭から抜けていた。実際に自分が出くわさなければ二度と思い出すこともなかっただろう。それくらい例外的な現象だ。
-　東がGPSの位置情報を頼りにたどり着いたのは3階建てのボロアパートだった。端末が指し示すハルカの場所は建物の一番東の部屋。下から順にチャイムを鳴らしていくと、1階は無人、2階には40代の中年男性、3階には内気なくせに負けん気だけは人一倍強そうな女子大生が住んでいて、ここから先の話は希海もよく知るところである。
+　その一方で、彼女ならそんな過去も強く越えていけるような、そんな気が希海にはしていた。だって彼女は……、
+「おっ、やっぱりここに居たのか」
+　タールで黄ばんだ喫煙室のガラス。その窓越しの廊下に東が立っていた。希海は慌ててタバコを灰皿に突っ込むと、扉を開けて小走りで廊下に出る。
+「すいません。待たせちゃいました？」
+「いやなに。むしろ私の方こそ急かしてしまったみたいだね」
+「あ、じゃあ待合室に戻りましょうか」
+　そう言って歩き出そうとする希海だが、東は立ち止まったまま動こうとしない。希海が声を掛けようと口を開きかけた瞬間。
+「タバコ、1本もらえるかね」
+　喫煙所に二人して入った。希海がズボンの後ろポケットからタバコを取り出すと、その赤一色のパッケージを見た東が「おっ」と声を上げた。
+「『<ruby><span class="simplified">红天演</span><rp>《</rp><rt>こうてんえん</rt><rp>》</rp></ruby>』とはずいぶん渋いね」
+「……ほっといて下さい」
+　西部解放まもない頃に販売が開始された、いわゆるオッサンタバコである。近頃では若い人はおろか年配の人ですら吸っているのを見かけないが。
+「どうぞ」
+　ポケットでくしゃくしゃになったタバコを取り出し、ライターと一緒に渡す。自分が尻に敷いていたものを差し出していいものかと希海は思ったが、相手が欲しいと言ったのだ。何も気にすることはあるまい。
+　東がタバコを咥え、ライターで火を点ける。さっき吸ったばかりなのだが、せっかくなので希海ももう1本吸うことにした。
+　煙を吐き出すと沈黙が訪れる。
+　この男との間では、本日最初の沈黙だった。
+　希海は会話が得意な方ではない。元からわりと人見知りするタイプなのもあるが、多くの人が自然にできるはずの気軽な発言ができないのだ。「ああ言ったらどう思われるかな」とか「こういうときは何を言うのがいいのかな」とか、そういうことを逡巡しているうちに沈黙が1分も2分も続いてしまって、結局いつも「今更なにか言っても唐突になっちゃうな」とだんまりを通すことになってしまう。
+　そしてその点において、東はとてもありがたい相手だった。こちらが発言せずとも勝手にべらべらと喋って、あれこれと質問をぶつけてくる。希海は特に何も考えず、ただ聞かれたことにだけ答えておけばいい。
+　だからこそ、この度の東の沈黙は希海の目にも、ものすごく特異なものに映った。
+「…………」
+　タバコを吸いながら横目でちらりと<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみる。東は火を点けたタバコに口を付けようとはせず、目をつぶったまま何かを考えている様子だった。
+　相手が目を閉じているのを良いことに、希海は東の顔をまじまじと凝視する。顔に刻まれた皺は案外深く、白髪の目立つ髪は前頭部がかなり後退していた。会話の最中に相手の胸元や手先を見る癖がある希海は、こうして陰から観察でもしなければ人の顔などろくに見ることがない。漠然と40代手前くらいかと思っていた目の前の男は、よくよく見ると50代くらいの顔つきをしていた。
+　！！
+　東が突然目を開いた。希海は慌てて視線をあさっての方向へと向ける。
+「青山君」
+「な、なんですか」
+　視線の端に捉えた東の目には決意の色が漂っていた。
+「君に頼みがあるんだ。聞いてもらえるかな。他でもない彼女のことでだ」
+　『彼女』という言葉にふらついていた希海の視線が東の方へ向き直る。頼みとやらの内容よりも、希海には女の子のことが気にかかっていた。
+「……私にできることなら」
+「そうか。ありがとう」
+「まだ、引き受けるとは言ってませんよ。私の手に余るような頼みならお断りさせてもらいますからね」
+「はははすまんすまん。そりゃそうか。内容も分からない頼みごとをほいほいと引き受けるヤツなんてそうそう居るわけない。いや、頼みというのは実はね――」
+　<ruby>飄々<rp>《</rp><rt>ひょうひょう</rt><rp>》</rp></ruby>とした東の態度とは裏腹に、その頼みごとは希海にとって重大な内容だった。
+「君に、彼女の新しいオーナーになってほしいと思っているんだ」
+　希海は言葉の意味をすぐには理解できなかった。彼女？　オーナー？　私が？　ひょっとしたら、自分の気付かないところで話題が変わってしまっていたのだろうか。
+　理解は、紙に垂らしたインクのように数秒遅れでやってきた。
+　――私があの子の、ハルカの新しい主人になる。
+　状況を理解した希海の頭に、洪水のような疑問が次々と湧いてくる。
+「な、なんで私が！？　貧乏学生にそんな大金ありませんよ！」
+「まあ落ち着きたまえ。君も知っての通り、彼女は少しばかり凄惨な過去を背負っていて、幸か不幸か当の本人はそのことをまったく覚えていない。だが、アンドロイドの脳たる<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>はそう単純ではなくてね。こいつは人間の脳と同じで、忘れていたことを突然思い出すことがたまにある。ネットワーク全体で情報を記憶しているニューラルプロセッサの特徴だな」
+　なるほど、人間の失われた記憶がふとしたきっかけで戻るならば、人間を高度に模した彼女にもそれが起こりうるというわけだ。しかし、
+「それがあの子を引き取る事とどういう関係があるんですか！？」
+「彼女が今後、新しい主人のもとで第二の人生を歩んだとしよう。もちろん、何事も無くそのまま幸せに暮らす可能性も大いにある。だが、ふとしたことで失っていた記憶を取り戻してしまったとしたらどうだろう？　ただでさえ、主人の自殺というショッキングな記憶だ。その上、自分が昔の主人のことなんて綺麗さっぱり忘れて、楽しく暮らしていたことを思い出したら？　新しい主人と心の中の古い主人との間で板挟みになったら？　……おそらく何らかの形で精神を病むだろうな。運が良ければ仕事が手につかないくらいで済むかもしれないが、それだって立派なリコール対象だ。最悪ニューロワームを介して閉律症を患う可能性さえありえる」
+　ニューロワームとは、オルゴン場を媒介して人の脳に住み着く情報病原体だ。鬱やストレスなど精神免疫力が落ちているときに感染しやすく、発症と同時に患者は眠ったままになってしまう。
+「そうでなくたって、普通の人は昔のオーナーの記憶を<ruby>快<rp>《</rp><rt>こころよ</rt><rp>》</rp></ruby>くは思わないだろう。彼女が問題なく仕事をこなしていたとしても、関係のこじれが何かしらのトラブルに発展するかもしれない」
+　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
+「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
+「……それで私ですか」
+「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
+　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>《</rp><rt>ロジック</rt><rp>》</rp></ruby>があるとは言えない。
+「それなら、私よりもっと適した人がここいるじゃないですか」
+「ん？　私かい？」
+　そう。今までの話は要するに、彼女の過去を知っており彼女に理解を示す人物が、新しいオーナーになるべきだということだった。だったら、わざわざどこの馬の骨ともしらない希海よりも、この男が自ら彼女を買い上げて、オーナーになればいいではないか。
+「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>《</rp><rt>かんば</rt><rp>》</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
+　解せなかった。
+　もちろん希海とて頭では彼の話を理解している。だが、世界に100億人、ここ近畿市だけでも1800万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
+　1800万人の中から1人、また1人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
+「……最初からそのつもりだったんですか」
+　希海は暗く、途切れそうな声で尋ねる。東は答えなかったが、希海とて引くつもりはなかった。俯き、目を合わせずに東の足元を睨みつける。拳を強く握りしめ、吐き捨てるようにゆっくりと希海は言い放った。
+「最初から新しい主人になってもらうつもりだったから、私に、あの子の過去を聞かせたんですか。あの子のことをどうしようかと考えていたところにちょうど都合のいいやつが来たから……、あの話を聞かせたんですか……」
+「すまない。そう思われても仕方がないのは分かっている。だが、本当にそんなつもりではなかった」
+「じゃあっ……！」
+　ならば一体どういうつもりだったのか。
+　よくよく考えればおかしな話だ。どうして、昨日今日会ったばかりの素性も知れない部外者に、顧客の重要な個人情報を漏らすのか。納得のいく答えはひとつ。情報を与えることで、部外者であった希海を当事者の輪に引きずり込んだのだ。世間知らずで単純そうなこの子なら、痛ましい少女の過去を聞けばきっと引き受けてくれる。そういう打算があったからこそ、この男は希海にあの話をしたのだ。
+「……私が君のアパートを訪れたときのことを覚えているかな」
+　声を荒げる希海に動じることなく、東はそっとまぶたを伏せる。つい数時間前の出来事を思い出しているというのに、その穏やかな表情と語り口は、まるで遠い昔の思い出を語っているようだった。
+「あの子の居場所を聞いたとき、君はとぼけてみせただろう。なかなか上手い演技だったよ。ふふ……あれには思わず騙されかけた」
+　話の意図が見えず希海は困惑する。確かにあのとき女の子をかばおうと嘘を付いた。だがそれが一体何なのか。
+「どうして君があんなことをしたのか、私はすぐには分からなかった。だがその直後、彼女が倒れたときの君の困惑ぶりを見て悟ったよ。ああそうか、この子は私から彼女を守ろうとしていたんだな、ってね。私を公安か何かと勘違いしていて、か弱いロボットの女の子が私に連れ去られると思ったんだろう」
+　希海は拳を握りしめたまま押し黙っている。
+「確かにこれは私の仕事だ。いや、本来は私の仕事ですらないのかもしれない。諸機能に問題が散見されない以上、後のこと――彼女が次の主人と上手くやっていけるかなんて本来なら無視してもいい事柄だ。彼女と新しい主人の間で何かあっても、担当者が頭を下げて新しい機体を用意すれば済む話だからね。だが君はただ一人、そんな彼女のことを気にかけていた。彼女を守るために小芝居のひとつを打ち、私の話にころころと顔色を変えてみせた」
+　そう言って東はずいぶんと前に燃え尽きてしまったタバコを灰皿に投げ入れる。
+「青山君にあの話をした理由はそれだよ。彼女のことを真剣に案じていた君だからこそ、聞いてもらいたいと思ったんだ。引き取ってもらうことを思いついたのはその後さ。……信じてもらえないかもしれないがね」
+　胸のあたりから何かがこみ上げてくる。目頭がかすかに熱くなっていくのを感じた。
+　私にできることなら。
+　ついさっき希海が言った言葉。自分で言っておきながら「できることなんてあるんだろうか」という疑念が脳裏を離れなかった。
+　今日だって、気を失って倒れたあの子を前にして何一つできなかったくせに。希海がやったことといえば、東の言われるままに彼女を車に乗せたくらいではないか。彼女がここに連れてこられて、数人の男達にどこかへ連れていかれたときも、希海は見ているだけしかできなかった。結果として彼らは治療をしてくれたわけだが、彼らが廃品回収業者だったとして、希海は彼女を守るために何か行動を起こせたのだろうか。大学にすらろくに行けない人間に、はたして何ができたというのだろうか。
+　東からオーナーになる話を聞かされてからというものの、意識の奥底では、ずっとそんなことを考えていたのだと思う。
+「彼女と上手くやっていけるかどうか不安なのかい？」
+　希海は無言で小さく頷く。
+　いつだってそうだ。頭では『こうすべき』と分かっていても、実際に行動に移す段になるといつも“心”に負けてしまう。怠惰や臆病風といった“心”にだ。女の子が連れていかれたときに見ているだけしかできなかったことも、会話が上手くできないのも、もう1年近くも大学へ行っていないのも、みんなそうだ。
+　そしてあの子は、そんな希海と対極の存在である。
+　身に降りかかる不幸を受け入れることができる強さ。自らのなすべきことを無欲に追いかけられるひたむきさ。どんなに辛いときでも笑っていられる純真さ。希海が持ち得ないもののすべてをあの子は持っている。自分があの子と上手くやっていけるとは希海には到底思えなかった。
+「さっき、ここに来る前に彼女と話をしたんだがね」
+　希海は反射的に顔を上げる。目に涙を浮かべているのも忘れて。
+「彼女、開口一番に君のことを話しだしてね。嬉しそうに言っていたよ。『すごく優しい人に助けてもらいました』とね」
+　視界がいっそう涙で歪んでいく。
+　――機械になりたい。
+　かつて希海はそう思っていた。今でもそう思っている。
+　機械なら臆病風や怠惰といった心に負けることもなく、自分がやろうと思ったことができる。機械なら嫌われることや失敗することを恐れたりなんかはしない。
+「優しさと臆病さはコイン裏表のようなものだ。大丈夫。君ならきっと彼女と上手くやっていけるよ」
+　希海は弱々しく頷いた。
+　今にもかすれて消えてしまいそうな動作。それは機械に憧れるひ弱な人間の、吹けば飛んでしまうような矜持の表れだった。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
