--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -14,7 +14,7 @@
 
   <div class="contents">
 <div class="text">
-　結局、希海が買い物に出掛けたのは夕方の4時を過ぎてからだった。スーパーの開店時刻までにはまだしばらく時間があるからと、溜まっていた洗濯物を片付けたところまでは良かった。だがその後、小休止とばかりにパソコンの前に座ってしまったのが運の尽きである。
+　結局、希海が買い物に出掛けたのは夕方の四時を過ぎてからだった。スーパーの開店時刻までにはまだしばらく時間があるからと、溜まっていた洗濯物を片付けたところまでは良かった。だがその後、小休止とばかりにパソコンの前に座ってしまったのが運の尽きである。
 　一度インターネットを始めてしまえば、そこから離れるのはなかなかに難しい。当初の目的だったブログや掲示板のチェックを終えても、どこかに何か面白いものがあるはず、と惰性でリンクを渡り歩き気付けば数時間が消し飛んでしまっていた。
 （まあ、こうして買い物はできたわけだし……）
 　スーパーの買い物袋を両手に抱えながら、言い得ぬ敗北感を感じる希海だった。インターネットは悪魔の発明。そんな言葉が頭に浮かぶ。
@@ -29,12 +29,12 @@
 　子供の頃の記憶は、誰にだって宝物だ。たとえランドセルがキャラクターをあしらったリュックサックに変わっても、純粋だったあの頃の、世界がキラキラと輝いていたようなあの感じは、今も昔も変わらないのかもしれない。
 　そんなことを考えながら歩いていると、やがて公園に差し掛かった。
 　――<span class="simplified">真摇七号公园</span>／まゆらぎななごうこうえん
-　入口に設置された金属プレートには簡体の文字が刻まれている。ご丁寧にも平仮名が併記されているのは、まだ漢字も読めない子供への気遣いか、それとも簡体字に馴染みが薄かった世代への配慮か。おそらく両方だろう。すっかりくすんで輝きを失った真鍮は、さながら顔に刻まれた皺のように、自らが経てきた人生の長さを誇らしげに主張していた。このプレートが設置された詳細な時期を希海は知らないが、ここ<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンの街開きと同時だと仮定すれば、設置から軽く50年は経っている計算となる。
-　50年か、と希海は思う。それだけの歳月に耐えてなお、公園の名称表示という仕事をこなせているのなら、このプレートはずいぶんと立派だ。自分なんてこの10年間ですっかり変わってしまったというのに。
-　――10年。
-　気付けば遠くまで来たものだ。色々なことがあったはずだが、いざ振り返ってみると、一瞬の出来事のように思える。今の希海には、新しいゲームを買ってもらったときの胸の高鳴りも、いじめられっ子をかばう勇気も、誰かと駆けっこをする元気もない。10年という月日が風雨のように全てを摩耗させてしまった。代わりに得たものといえば、勇気とは反対方向に作用しがちな人生経験と頭でっかちな知識だけ。
+　入口に設置された金属プレートには簡体の文字が刻まれている。ご丁寧にも平仮名が併記されているのは、まだ漢字も読めない子供への気遣いか、それとも簡体字に馴染みが薄かった世代への配慮か。おそらく両方だろう。すっかりくすんで輝きを失った真鍮は、さながら顔に刻まれた皺のように、自らが経てきた人生の長さを誇らしげに主張していた。このプレートが設置された詳細な時期を希海は知らないが、ここ<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンの街開きと同時だと仮定すれば、設置から軽く五十年は経っている計算となる。
+　五十年か、と希海は思う。それだけの歳月に耐えてなお、公園の名称表示という仕事をこなせているのなら、このプレートはずいぶんと立派だ。自分なんてこの十年間ですっかり変わってしまったというのに。
+　――十年。
+　気付けば遠くまで来たものだ。色々なことがあったはずだが、いざ振り返ってみると、一瞬の出来事のように思える。今の希海には、新しいゲームを買ってもらったときの胸の高鳴りも、いじめられっ子をかばう勇気も、誰かと駆けっこをする元気もない。十年という月日が風雨のように全てを摩耗させてしまった。代わりに得たものといえば、勇気とは反対方向に作用しがちな人生経験と頭でっかちな知識だけ。
 　公園を抜け、センターラインも歩道もない生活道路に入る。次の角を左に曲がった先にある、歩行者用の階段を登れば、希海のアパートはすぐこそだ。
-　両手に持ったスーパーの袋が手の平に食い込む。さすがに5kgの米を持って歩くのはいささか辛かった。それにここから先は――
+　両手に持ったスーパーの袋が手の平に食い込む。さすがに五キロの米を持って歩くのはいささか辛かった。それにここから先は――
 　希海は階段を前にして荷物を一旦地面に降ろし、眼前の階段を睨みつけた。
 　ここから先は、態勢を整えてから登らないと危険だ。
 　希海が恨めしそうな目で見つめるこの階段は『とりあえず作った』という感じがありありと見て取れるくらい、適当な設計になっている。段差は高い、間隔は歩幅と合わない、段の一つ一つが微妙に傾斜している。人間工学の専門家が見たら卒倒しそうな出来栄えだ。何度ここで蹴つまずいて、危うく転びかけそうになったか分かったものではない。これが現代人によって作られたものだとは、希海にはとても信じられなかった。もしかしてこの階段は古くからある遺跡か何かの一部で、元の設計は弥生時代だか縄文時代だかの人間がやったのではないか。ボコボコになった足場は、ひょっとすると数千年も前からこの土地の歴史を見守り続けてきた、ありがたい石畳なのではないか。無論、突拍子もない思いつきだが、そんな考えすら浮かんでくるほどの滅茶苦茶な作りだった。
@@ -42,8 +42,8 @@
 　人影が見えた。
 　別段、違和感を持つことはなかった。希海の頭は、『誰か居るな』とか『女の子かな』とか、そんな取るに足らないこと考えていたのだろう。まあいいや、と視線を外そうとした直後のことである。
 　人影が一瞬ゆらりと傾き、そのまま空高くから希海の方へと向かって一直線に降ってきた。
-　もちろん避けられなかった。両手に提げていたスーパーの袋が邪魔だったせいもあるが、人間、予想外の出来事にはなかなかどうして機敏な動作が行えないものである。避けられないならせめて受け止めようと思った希海だったが、2mちょっとの<ruby>高低差<rp>《</rp><rt>ポテンシャル</rt><rp>》</rp></ruby>が生み出す速度は案外馬鹿にならず、角運動量は無慈悲にもその総和が保存され、結果として希海のかかとを中心とした世にも危険な回転運動が始まるのだった。
-　胸元にのしかかってくる体重に足元がふらつく。どこの誰だか知らない不注意な人物を上半身で受け止めたそのままの形で、希海は仰向けに倒れてしまう。赤と青と紫が複雑に絡み合ったまだら模様の夕焼け。3本1組の真っ黒な送電線が、上から下へと希海の視界を横切っていった。
+　もちろん避けられなかった。両手に提げていたスーパーの袋が邪魔だったせいもあるが、人間、予想外の出来事にはなかなかどうして機敏な動作が行えないものである。避けられないならせめて受け止めようと思った希海だったが、２ｍちょっとの<ruby>高低差<rp>《</rp><rt>ポテンシャル</rt><rp>》</rp></ruby>が生み出す速度は案外馬鹿にならず、角運動量は無慈悲にもその総和が保存され、結果として希海のかかとを中心とした世にも危険な回転運動が始まるのだった。
+　胸元にのしかかってくる体重に足元がふらつく。どこの誰だか知らない不注意な人物を上半身で受け止めたそのままの形で、希海は仰向けに倒れてしまう。赤と青と紫が複雑に絡み合ったまだら模様の夕焼け。三本一組の真っ黒な送電線が、上から下へと希海の視界を横切っていった。
 　――！！
 　アスファルトの地面に背中から叩きつけられる。体の後ろ半分に衝撃が走り、一瞬遅れて身悶えするほどの激痛がやってきた。うめき声すら出せずに必死に歯を食いしばる。頭を打たなかったのだけは不幸中の幸いだ。肘と背中と肩と、あとおしりも痛い。さすろうにも腕の数が足りなかった。
 「ど……どこ見て歩いてんのよ……」
@@ -78,6 +78,52 @@
 　うんざりしてアスファルトの路面に頭をあずけると、見慣れた街の夕暮れが普段よりもずっと広い視野角を持って網膜に投影される。オレンジから紺色に変わるグラデーションの空。夕日に照らされ濃い陰影を刻む綿雲。視界の隅では電柱と戸建住宅がそびえ立ち、何本もの電力線と通信ケーブルがまるで蔓草のようにそれらの間を横切っていた。
 （何年ぶりかな……。こうして地面に寝っ転がるの）
 　眼前に広がる空は人工物に切り取られてなお、驚くほどに大きかった。
+
+　十三回。
+　女の子が希海の上から離れるまでに言った『すいません』の数である。
+「本当にすいません、私、何だかぼんやりしちゃっていて……」
+　十四。地面に落としたスーパーの袋を拾い上げながら、希海はへらへらと笑う。
+「だからそんなに謝んなくていいって。ここの階段こけやすいしね」
+　購入した品物は大丈夫だろうか。倒れたとき、思いっきり地面に叩きつけてしまったから、ひょっとしたらいくらか、やられているかもしれない。希海は袋の口を開けて中身をさっと確認する。
+「それよりあんたの方は大丈夫なの？　どっか壊れたりしてない？」
+「えっ」
+　希海の言葉に女の子が固まる。
+「あれ？　あんたロボットなんでしょ。違った？」
+「…………どうして分かったんですか」
+　自らの正体を看過されたことが不思議だったようだ。無理もない。この子の見た目はあまりにも人間とそっくりで、ぱっと見はおろか、その外見をじっくりと眺めてみたとしてもロボットだと容易には判別できない。希海だって胸元の二次元コードがなければロボットだと気付くことはなかっただろう。
+「えーっと……ほら、あんたの二次元コードが目に入ったからよ」
+　胸のところの、とは言わなかった。普段から胸元をじろじろ見ているのかと思われそうで少し気恥ずかしいからだ。相手がロボットだと、普段気にしなくていいようなことまで気にしてしまうのだろうか。仮にも女同士なのだから胸を見ようがどこを見ようが、何も後ろめたいことなどありはしないのに。というかそもそも、そんな服を着られたら意図せずとも見えてしまう。
+　服。そういえば――――
+　最初に抱いた疑問が、希海の脳裏に蘇ってくる。
+「それはそうとさ。その格好、どうしたの？」
+　彼女が身にまとう、紙でできたぶかぶかの衣服。いくらロボットといえどもこんな服を着て街中を歩きまわるはずがない。彼女がアンドロイドであるという衝撃にとらわれていて、希海はそのことをすっかり忘れてしまっていた。
+「あ……。えっと、これは…………」
+　女の子はごにょごにょと言い淀みながら居心地悪そうに下を向き、やがてそのまま一言も喋らなくなってしまう。どうやら、聞いてはいけない質問をしてしまったらしい。
+「あっ、む、無理に聞くつもりはないんだけどさ。もし何か困ってたら、え、遠慮せずに言ってよ。ロボットだからって気にすることないよ。みんな、じ……自分一人の力じゃ生きてるわけじゃない……んだから」
+　急いで場を取り繕う希海。だが、女の子はまん丸な目を釣り下げ、埃のかぶったアスファルトをじっと見つめたまま動こうとしない。その姿はまるで隠していたイタズラか何かを発見されて、叱られることを覚悟した子供のように見えた。
+「ま、まあ別に言いたくないなら、無理して言わなくてもいいんだけど、……ね。誰だって話したくないことの…………、一つや二つくらいある、と思う…………し……」
+　希海は沈黙を埋めようと必死だった。もはや自分でも何を喋っているのかよく分からなくない。
+「あ、えっと……だから……その……」
+　そして言葉が尽きた。
+　さて、どうしたものか。希海はまぶたを閉じて大きく息をつく。女の子はうつむき、眉間に皺を寄せたままだ。アスファルトの上に立ち、夕日に照らされるひとりの少女。いや、正確には少女の姿をしたロボット。希海が初めてこの目で見たロボットである。その姿は想像していたよりもずっと人間にそっくりで、見れば見るほど本当にロボットなのか疑わしくなってくる。ほら、こうしてうつむいている間も、不規則にまばたきをしたり、呼吸でかすかに肩を上下させたり、ばつが悪そうに指先をもぞもぞと動かしたりしているではないか。
+「……じゃあ……私、行くから」
+　そして希海が打った次の一手は、これ以上何もしないということだった。どうしたもこうしたもない。本人がそれ以上話したくないと言うのなら、希海にできることなど何ひとつ残ってはいなかった。
+　スーパーの袋を手に取り、女の子に背を向けた。
+　希海は欠陥だらけの階段へと足を掛け、登山者の心境で一歩また一歩と登っていく。後ろの女の子は、今どんな顔をしているのだろう。隠し事がばれずにすんだ安堵の表情か、不審な奴に会ったという怪訝な表情か。はたまた背を向けた途端にロボットらしい無表情にでも戻っているのかもしれない。
+（何やってんだろ私……）
+　おどり場に差し掛かった希海は、自嘲気味にため息をつく。
+　そんなに彼女のことが気になるなら、今からでも振り返ってもう一度話しかければいい。「変なこと聞いてごめんね」と笑って、そのあと気が済むまで世間話でも何でもすればいい。
+　だが、希海にはどうしてもそれができないのだ。一度告げたさよならを撤回して引き返してくることがかっこ悪いと思っているのか、それとも何度も話しかけて彼女にしつこく思われるのが怖いのか。どちらにせよ下らない理由だ。それは希海も分かっている。分かってはいるが、どうしてもできないのだ。
+　いつだってそうだ。希海にとって、頭で理解することと実際に行動することの間には、次元の違いほどの大きな隔たりがある。そもそも振り返ってみたところで、止まってしまった会話が再び息を吹き返すとは希海には思えない。百歩譲ってそれができたとしても、どこかでまた変なこと言ってしまって気まずくなるのがオチだ。
+　背後で階段を駆け上がる音がした。
+　希海の思考が中断される。タッタタッタッタタタッと、でたらめに演奏したパーカッションのようなリズム。その理由は足場の広さが統一されていないからで、この階段を駆け上がれば誰だってそうなる。たとえそれが科学の粋を集めて作られたアンドロイドであったとしても。
+「待ってください！」
+　意を決したような声が強く響き、右腕を強く引っ張られた。
+　今現在、希海が立っている場所はただでさえつまずきやすい、あの欠陥だらけの階段だ。足元のコンクリートはボコボコに歪んでおり、あろうことか下側に向かって微妙な傾斜までついている。
+「うわっ！？」
+　姿勢が崩れた。
+　両手を振り回してバランスを取ろうにも、右の腕は背後から掴まれたままである。左手でがむしゃらに宙を引っ掻き、両足の筋肉を硬直させて必死に踏ん張ると、重心の変位は次第に収まっていく。
+　今度は転ばずにすみそうだった。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
