--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -14,117 +14,75 @@
 
   <div class="contents">
 <div class="text">
-　重い話になってしまったことだし少し休憩でもしようか。東はそう言いって席を立つと、希海を残してどこかへ行ってしまった。
-「ふぅ」
-　ゆっくりと紫煙を吐き出し、ヤニで黄ばんだ天井を仰いだ。希海は、再び喫煙所までタバコを吸いに来ている。
-　一度に色んな話を聞きすぎて頭が付いていっていなかった。もちろん。話の内容は理解できるのだが、その中の情報ひとつひとつを精査することがどうしてもできない。
-　壁の時計を見ると、時刻は深夜の1時半。無理もないかと希海は思う。ただでさえ今日は早起きだったのに、もうこんな時間だ。心身ともにすっかり疲れてしまっている。帰ったら軽く10時間は寝てしまうだろう。下手したらそれ以上もありうる。早朝立てた早寝早起きという目標は、早くも達成が困難になりつつあった。
-「…………」
-　希海はぼんやりとタバコから立ち上がる煙を見つめている。絶え間なく立ち上っては渦を巻いて拡散していく煙。その流れは決して定常ではなく、大きく揺らいでは静かに流れ、また揺らいでは静かに流れてを不規則に繰り返している。
-（ハルカ……、か）
-　あの少女が失っていた記憶。想像していたのよりもずっと深刻な話だった。ロボットである彼女にとって、主人との絆こそが世界のすべてだったのだろうと希海は思う。
-　ちょうど犬や猫と同じだ。大好きな主人のために働いて、大好きな主人と話をして、褒められると天にも登れるくらい嬉しくて。彼女のオーナーは多忙な人だったらしいので、一日にできる会話なんてたかが知れていただろう。それでも彼女は彼との会話に生涯の喜びのすべてを見出していたに違いない。そうでなければ、遺体に寄り添ったまま自らの死を待ったりはしないはずだ。
-　そしてある朝、彼女が目を覚ますと、その大好きだった人が冷たくなっていたのである。そのときの様子を考えると、希海の胸はいっそう強く締め付けられた。
-　彼女は……、ハルカはそのときどうしたのだろう。作り物の涙を流して子供のように泣いたのだろうか。それとも、冷たくなった主人の姿を無表情に眺めながら、プロセッサを必死に動かしていたのだろうか。いずれにせよ悲しい光景だと希海は思う。
-（あの子、これからどうなるのかな……）
-　機能に問題はないという話だったので、また新しい主人のもとで第二の人生を送ることになるのだろうか。それならば記憶を失ったのはある意味、幸せなのかもしれない。自分が彼女の様な体験をすればもう二度と立ち直れないだろうし、仮に立ち直れても一生トラウマを引きずって生きていくことになるに違いない。自らの歩みを止めてしまうような記憶は、綺麗に忘れてしまった方が当人のためだ。
-　でも、
-　――私は、それでも構いません
-　その一方で、彼女ならそんな過去も強く越えていけるような、そんな気が希海にはしていた。だって彼女は……、
-「おっ、やっぱりここに居たのか」
-　タールで黄ばんだ喫煙室のガラス。その窓越しの廊下に東が立っていた。希海は慌ててタバコを灰皿に突っ込むと、扉を開けて小走りで廊下に出る。
-「すいません。待たせちゃいました？」
-「いやなに。むしろ私の方こそ急かしてしまったみたいだね」
-「あ、じゃあ待合室に戻りましょうか」
-　そう言って歩き出そうとする希海だが、東は立ち止まったまま動こうとしない。希海が声を掛けようと口を開きかけた瞬間。
-「タバコ、1本もらえるかね」
-　喫煙所に二人して入った。希海がズボンの後ろポケットからタバコを取り出すと、その赤一色のパッケージを見た東が「おっ」と声を上げた。
-「『<ruby><span class="simplified">红天演</span><rp>《</rp><rt>こうてんえん</rt><rp>》</rp></ruby>』とはずいぶん渋いね」
-「……ほっといて下さい」
-　西部解放まもない頃に販売が開始された、いわゆるオッサンタバコである。近頃では若い人はおろか年配の人ですら吸っているのを見かけないが。
-「どうぞ」
-　ポケットでくしゃくしゃになったタバコを取り出し、ライターと一緒に渡す。自分が尻に敷いていたものを差し出していいものかと希海は思ったが、相手が欲しいと言ったのだ。何も気にすることはあるまい。
-　東がタバコを咥え、ライターで火を点ける。さっき吸ったばかりなのだが、せっかくなので希海ももう1本吸うことにした。
-　煙を吐き出すと沈黙が訪れる。
-　この男との間では、本日最初の沈黙だった。
-　希海は会話が得意な方ではない。元からわりと人見知りするタイプなのもあるが、多くの人が自然にできるはずの気軽な発言ができないのだ。「ああ言ったらどう思われるかな」とか「こういうときは何を言うのがいいのかな」とか、そういうことを逡巡しているうちに沈黙が1分も2分も続いてしまって、結局いつも「今更なにか言っても唐突になっちゃうな」とだんまりを通すことになってしまう。
-　そしてその点において、東はとてもありがたい相手だった。こちらが発言せずとも勝手にべらべらと喋って、あれこれと質問をぶつけてくる。希海は特に何も考えず、ただ聞かれたことにだけ答えておけばいい。
-　だからこそ、この度の東の沈黙は希海の目にも、ものすごく特異なものに映った。
-「…………」
-　タバコを吸いながら横目でちらりと<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみる。東は火を点けたタバコに口を付けようとはせず、目をつぶったまま何かを考えている様子だった。
-　相手が目を閉じているのを良いことに、希海は東の顔をまじまじと凝視する。顔に刻まれた皺は案外深く、白髪の目立つ髪は前頭部がかなり後退していた。会話の最中に相手の胸元や手先を見る癖がある希海は、こうして陰から観察でもしなければ人の顔などろくに見ることがない。漠然と40代手前くらいかと思っていた目の前の男は、よくよく見ると50代くらいの顔つきをしていた。
-　！！
-　東が突然目を開いた。希海は慌てて視線をあさっての方向へと向ける。
-「青山君」
-「な、なんですか」
-　視線の端に捉えた東の目には決意の色が漂っていた。
-「君に頼みがあるんだ。聞いてもらえるかな。他でもない彼女のことでだ」
-　『彼女』という言葉にふらついていた希海の視線が東の方へ向き直る。頼みとやらの内容よりも、希海には女の子のことが気にかかっていた。
-「……私にできることなら」
-「そうか。ありがとう」
-「まだ、引き受けるとは言ってませんよ。私の手に余るような頼みならお断りさせてもらいますからね」
-「はははすまんすまん。そりゃそうか。内容も分からない頼みごとをほいほいと引き受けるヤツなんてそうそう居るわけない。いや、頼みというのは実はね――」
-　<ruby>飄々<rp>《</rp><rt>ひょうひょう</rt><rp>》</rp></ruby>とした東の態度とは裏腹に、その頼みごとは希海にとって重大な内容だった。
-「君に、彼女の新しいオーナーになってほしいと思っているんだ」
-　希海は言葉の意味をすぐには理解できなかった。彼女？　オーナー？　私が？　ひょっとしたら、自分の気付かないところで話題が変わってしまっていたのだろうか。
-　理解は、紙に垂らしたインクのように数秒遅れでやってきた。
-　――私があの子の、ハルカの新しい主人になる。
-　状況を理解した希海の頭に、洪水のような疑問が次々と湧いてくる。
-「な、なんで私が！？　貧乏学生にそんな大金ありませんよ！」
-「まあ落ち着きたまえ。君も知っての通り、彼女は少しばかり凄惨な過去を背負っていて、幸か不幸か当の本人はそのことをまったく覚えていない。だが、アンドロイドの脳たる<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>はそう単純ではなくてね。こいつは人間の脳と同じで、忘れていたことを突然思い出すことがたまにある。ネットワーク全体で情報を記憶しているニューラルプロセッサの特徴だな」
-　なるほど、人間の失われた記憶がふとしたきっかけで戻るならば、人間を高度に模した彼女にもそれが起こりうるというわけだ。しかし、
-「それがあの子を引き取る事とどういう関係があるんですか！？」
-「彼女が今後、新しい主人のもとで第二の人生を歩んだとしよう。もちろん、何事も無くそのまま幸せに暮らす可能性も大いにある。だが、ふとしたことで失っていた記憶を取り戻してしまったとしたらどうだろう？　ただでさえ、主人の自殺というショッキングな記憶だ。その上、自分が昔の主人のことなんて綺麗さっぱり忘れて、楽しく暮らしていたことを思い出したら？　新しい主人と心の中の古い主人との間で板挟みになったら？　……おそらく何らかの形で精神を病むだろうな。運が良ければ仕事が手につかないくらいで済むかもしれないが、それだって立派なリコール対象だ。最悪ニューロワームを介して閉律症を患う可能性さえありえる」
-　ニューロワームとは、オルゴン場を媒介して人の脳に住み着く情報病原体だ。鬱やストレスなど精神免疫力が落ちているときに感染しやすく、発症と同時に患者は眠ったままになってしまう。
-「そうでなくたって、普通の人は昔のオーナーの記憶を<ruby>快<rp>《</rp><rt>こころよ</rt><rp>》</rp></ruby>くは思わないだろう。彼女が問題なく仕事をこなしていたとしても、関係のこじれが何かしらのトラブルに発展するかもしれない」
-　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
-「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
-「……それで私ですか」
-「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
-　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>《</rp><rt>ロジック</rt><rp>》</rp></ruby>があるとは言えない。
-「それなら、私よりもっと適した人がここいるじゃないですか」
-「ん？　私かい？」
-　そう。今までの話は要するに、彼女の過去を知っており彼女に理解を示す人物が、新しいオーナーになるべきだということだった。だったら、わざわざどこの馬の骨ともしらない希海よりも、この男が自ら彼女を買い上げて、オーナーになればいいではないか。
-「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>《</rp><rt>かんば</rt><rp>》</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
-　解せなかった。
-　もちろん希海とて頭では彼の話を理解している。だが、世界に100億人、ここ近畿市だけでも1800万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
-　1800万人の中から1人、また1人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
-「……最初からそのつもりだったんですか」
-　希海は暗く、途切れそうな声で尋ねる。東は答えなかったが、希海とて引くつもりはなかった。俯き、目を合わせずに東の足元を睨みつける。拳を強く握りしめ、吐き捨てるようにゆっくりと希海は言い放った。
-「最初から新しい主人になってもらうつもりだったから、私に、あの子の過去を聞かせたんですか。あの子のことをどうしようかと考えていたところにちょうど都合のいいやつが来たから……、あの話を聞かせたんですか……」
-「すまない。そう思われても仕方がないのは分かっている。だが、本当にそんなつもりではなかった」
-「じゃあっ……！」
-　ならば一体どういうつもりだったのか。
-　よくよく考えればおかしな話だ。どうして、昨日今日会ったばかりの素性も知れない部外者に、顧客の重要な個人情報を漏らすのか。納得のいく答えはひとつ。情報を与えることで、部外者であった希海を当事者の輪に引きずり込んだのだ。世間知らずで単純そうなこの子なら、痛ましい少女の過去を聞けばきっと引き受けてくれる。そういう打算があったからこそ、この男は希海にあの話をしたのだ。
-「……私が君のアパートを訪れたときのことを覚えているかな」
-　声を荒げる希海に動じることなく、東はそっとまぶたを伏せる。つい数時間前の出来事を思い出しているというのに、その穏やかな表情と語り口は、まるで遠い昔の思い出を語っているようだった。
-「あの子の居場所を聞いたとき、君はとぼけてみせただろう。なかなか上手い演技だったよ。ふふ……あれには思わず騙されかけた」
-　話の意図が見えず希海は困惑する。確かにあのとき女の子をかばおうと嘘を付いた。だがそれが一体何なのか。
-「どうして君があんなことをしたのか、私はすぐには分からなかった。だがその直後、彼女が倒れたときの君の困惑ぶりを見て悟ったよ。ああそうか、この子は私から彼女を守ろうとしていたんだな、ってね。私を公安か何かと勘違いしていて、か弱いロボットの女の子が私に連れ去られると思ったんだろう」
-　希海は拳を握りしめたまま押し黙っている。
-「確かにこれは私の仕事だ。いや、本来は私の仕事ですらないのかもしれない。諸機能に問題が散見されない以上、後のこと――彼女が次の主人と上手くやっていけるかなんて本来なら無視してもいい事柄だ。彼女と新しい主人の間で何かあっても、担当者が頭を下げて新しい機体を用意すれば済む話だからね。だが君はただ一人、そんな彼女のことを気にかけていた。彼女を守るために小芝居のひとつを打ち、私の話にころころと顔色を変えてみせた」
-　そう言って東はずいぶんと前に燃え尽きてしまったタバコを灰皿に投げ入れる。
-「青山君にあの話をした理由はそれだよ。彼女のことを真剣に案じていた君だからこそ、聞いてもらいたいと思ったんだ。引き取ってもらうことを思いついたのはその後さ。……信じてもらえないかもしれないがね」
-　胸のあたりから何かがこみ上げてくる。目頭がかすかに熱くなっていくのを感じた。
-　私にできることなら。
-　ついさっき希海が言った言葉。自分で言っておきながら「できることなんてあるんだろうか」という疑念が脳裏を離れなかった。
-　今日だって、気を失って倒れたあの子を前にして何一つできなかったくせに。希海がやったことといえば、東の言われるままに彼女を車に乗せたくらいではないか。彼女がここに連れてこられて、数人の男達にどこかへ連れていかれたときも、希海は見ているだけしかできなかった。結果として彼らは治療をしてくれたわけだが、彼らが廃品回収業者だったとして、希海は彼女を守るために何か行動を起こせたのだろうか。大学にすらろくに行けない人間に、はたして何ができたというのだろうか。
-　東からオーナーになる話を聞かされてからというものの、意識の奥底では、ずっとそんなことを考えていたのだと思う。
-「彼女と上手くやっていけるかどうか不安なのかい？」
-　希海は無言で小さく頷く。
-　いつだってそうだ。頭では『こうすべき』と分かっていても、実際に行動に移す段になるといつも“心”に負けてしまう。怠惰や臆病風といった“心”にだ。女の子が連れていかれたときに見ているだけしかできなかったことも、会話が上手くできないのも、もう1年近くも大学へ行っていないのも、みんなそうだ。
-　そしてあの子は、そんな希海と対極の存在である。
-　身に降りかかる不幸を受け入れることができる強さ。自らのなすべきことを無欲に追いかけられるひたむきさ。どんなに辛いときでも笑っていられる純真さ。希海が持ち得ないもののすべてをあの子は持っている。自分があの子と上手くやっていけるとは希海には到底思えなかった。
-「さっき、ここに来る前に彼女と話をしたんだがね」
-　希海は反射的に顔を上げる。目に涙を浮かべているのも忘れて。
-「彼女、開口一番に君のことを話しだしてね。嬉しそうに言っていたよ。『すごく優しい人に助けてもらいました』とね」
-　視界がいっそう涙で歪んでいく。
-　――機械になりたい。
-　かつて希海はそう思っていた。今でもそう思っている。
-　機械なら臆病風や怠惰といった心に負けることもなく、自分がやろうと思ったことができる。機械なら嫌われることや失敗することを恐れたりなんかはしない。
-「優しさと臆病さはコイン裏表のようなものだ。大丈夫。君ならきっと彼女と上手くやっていけるよ」
-　希海は弱々しく頷いた。
-　今にもかすれて消えてしまいそうな動作。それは機械に憧れるひ弱な人間の、吹けば飛んでしまうような矜持の表れだった。
+　トイレで顔を洗うと途端に冷静になった。あのとき希海の瞳にたまった涙は結局こぼれ落ちることはなかった。人前で泣くのが恥ずかしくて必死に我慢したからだ。
+（何で泣いてんのよ私は）
+　不登校が長く続くと、本当にどうでもいいことで泣けてくる。例えば、楽しかった子供の頃を思い出したときや、人生の儚さについて考えたとき、布団の中で自分の将来を考えたときや、思いもよらず人から褒められたときだ。
+（……ああくそっ、恥ずかしい）
+　希海は恨めしげな表情で鏡を睨む。まだ少し目が赤い。本当なら充血が収まるまで個室に籠っていたいところだが、生憎、人を待たせている。希海は顔もろくに拭かずに急ぎ足でトイレを出た。
+　ひと気のない廊下を渡って待合室に戻る。東は椅子に座って希海の帰りを待ち構えていた。
+「準備はできたかな」
+　無言でうなずいた。希海はこれからここで、あの子と顔を合わせることになっている。準備とは他でもない心の準備だ。顔合わせが済むと、あのロボットの女の子は今日から希海の家族となる。
+　そう、今日からだ。明日からでも来週からでもない。「間が空きすぎて変に気まずくなるといけないから」という東のいらぬお節介で、早くも今日から彼女と一緒に暮らすことになってしまったのだ。心の準備よりももっと切実な、生活の準備すら整っていないというのに。
+（やっぱり私、いいように利用されたんじゃ……）
+　そんな考えが頭をよぎるが、もはや何を言っても手遅れだ。いや、厳密に言うと今からでも「やっぱやめた」と、無かったことにできるのかもしれない。だが、今更ちゃぶ台をひっくり返す度胸など希海にはありやしなかった。
+「青山君も分かっていると思うが、念のため確認しておこう。今のところ彼女が覚えているのは、廃品置き場から抜けだした後のことだけだ。それより前の記憶――以前の主人との間のことを彼女は覚えていない」
+　あくまでも今のところ、だ。ひょっとすると今後、何かの拍子で思い出すことがあるかもしれない。そのとき、希海は彼女にどんな言葉を投げかけてやれるのだろうか。
+「昔の記憶については彼女に話していないし、自分で思い出すまでは青山君も話さないようにしてくれ。ウチの会社にあるデータについて聞かれたら『保管期限が過ぎてしまってもう残っていない』とでも言っておくよ。君が彼女の新しいオーナーになったことについては……、そうだな『<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>の情報欠損に関する臨床研究のためで、君は研究の協力者として選ばれた何も知らない一般人』ということしよう。そして君が協力者に選ばれた理由はズバリ“縁”だ」
+　確認のはずだったのだが、思わぬ口裏合わせに話が発展してしまった。希海は東の言った言葉を頭の中で復唱する。ここをしっかり押さえておかないと、あとでとんでもないボロが出てしまう。何らかの理由で廃棄された彼女は、廃品置き場から逃げ出してきたところを間一髪で連れ戻された。長い間メンテを受けていなかったせいで昔の記憶が欠落していて、その内容は東ですら知らないし調べられない。一種の記憶喪失である彼女は貴重な研究対象であり、その協力者として彼女と縁のあった自分が里親に選ばれた。
+（ん、待てよ……？　そういえば）
+「名前はどうするんですか？」
+「名前？」
+　東に聞き返される。
+「だって今の話だと、ハルカっていうあの子の名前は、私たちが知りえない情報じゃないですか。あ、そうだ。じゃあこうしましょう。名前だけは――」
+　名前だけはデータベースで知ることができた。そんな希海の言葉は東によって遮られ、音として空気を震わせることはなかった。
+「名前は、君が付けるんだよ」
+「…………え？」
+　考えてみれば当然のことだった。オーナーになるのだから名前くらいは当然、自分で付けるのだろう。あまりに急すぎてそんな単純なことが希海の頭からすっぽり抜け落ちていた。
+「ああ、念のため言っておくが、ハルカという昔の名前やそれに似た響きの言葉は使わないように。昔のことを思い出すきっかけになってはいかんからね」
+「ちょ、ちょっと待ってくださいよ！　私、まだ何にも考えてないですよ！」
+　想定外の課題に慌てふためく。東は少し楽しそうに、そんな希海に追い打ちをかけた。
+「じゃあ彼女を呼んでくるから。それまでに考えておいてくれ」
+「はぁ！？」
+　そんな1分やそこらで思いつくわけがない。子供の名前を考えるときだって、字面や響きを練ったり姓名判断にかけたりして、あれこれと思い悩んで決めるというのに。
+　そして東は待合室の奥にある廊下の闇に消えてしまい、希海はだだっ広い待合室に一人残された。深夜の静寂が耳鳴りとなって希海の鼓膜に浸透していく。
+（ええと、ええっと）
+　希海は脳みそをフル回転させて必死に考える。
+（あの子はロボットなんだから、女の子なんだから）
+　そうして最初に浮かんだのは『ロボ子』というあまりにもあんまりな名前だった。
+（アホかっ、もっとマシなのは……）
+　だが思考というものは一度思い浮かんでしまうと、それにずるずると引っ張られるものである。いくら追い払おうとしても希海の頭からロボ子の3文字が離れず、思い付く名前すべてに『ロボ』か『子』のどちらかが付いてしまう。
+（……ロボ美、ロボ江、ロボ子。ああもう違う違う！　……ロボ香、ヒュー子、マノ子。だから違うって！）
+　そうこうしている内に、東はさっさと女の子を連れて帰ってきてしまったようだ。待合室の奥にある廊下から、こつこつと足音が聞こえ、希海の視線がそちらに釘付けになる。
+　暗がりの中から、ふたつの影が現れた。
+　スーツ姿の中年男性、そしてその後には中学生くらいの少女。白いブラウスと紺のジャンパースカートを着てそろそろと歩くその姿は、わずかに緊張した彼女の表情と相まって、まるでピアノの発表会か何かのように見えた。待合室の明々とした照明と廊下の暗がりのコントラストは、さながら舞台のスポットライトだ。
+　東が希海の前で立ち止まると、女の子も一緒に立ち止まる。
+「ひ、久しぶり」
+　最初に声を掛けたのは希海だった。
+　初めて会ったときはそうでもなかったのだが、何だか今は妙にぎこちなくなってしまう。別れてからまだ数時間しか経っていないというのに、もう何年も前の友人と再会したかのような懐かしさだった。
+　女の子はしばらく、ぽかんとした表情でこちらを見つめていたが、やがてその顔に愛らしい笑みを湛えると、
+「お久しぶりです。東さんから聞きましたよ。私の新しいオーナーになってくれるんですよね。ふつつかものですが、よろしくお願いします」
+　そう言って丁寧にお辞儀をした。
+「あ、うん。こっちこそよろしく」
+　希海は照れくさそうに頭を掻きながらこれに応える。こういう場面はどうも苦手だった。
+「ところで青山君、いい名前は思い付いたかな」
+「あ、あんな短時間で思い付くわけないでしょう」
+「こういうのは変に悩むより直感でスパっと決めてしまったほうがいいぞ。最初は変に思っても長い間使っていたら、だんだん慣れてくる」
+　どんなに長い間使ってもロボ子だけは慣れることなどありはしないだろうし、そもそもそんな名前に慣れたくなかった。
+「名前？」
+　東との会話に女の子が首を突っ込んでくる。
+「ああ、君の新しい名前だよ。青山君が付けてくれるそうだ」
+「今すぐは無理だけどね……」
+「そんなこと言っていると、ずるずると決められないまま気が付けば数週間……なんてことになるぞ。私の邪推だが、君は今日できることを明日、明後日に引き伸ばすタイプだろう」
+　悲しいかな図星である。そんなにわかりやすい性格なのか、東の観察眼が人並み外れているのかはわからない。
+「だ、大丈夫ですよ。今日中にはちゃんと決めますって。ていうか帰りどうすれば良いんですか？」
+　壁の時計は深夜の2時を指していた。この時間だと電車やバスはもう走っていない。希海のアパートからここまで車で約30分。歩いて帰れない距離ではないが、そもそも道がわからなかった。
+「ああ、もう遅いからね。私の車で送っていくよ」
+　タクシーを呼ばずに自分が送るというのが、この男らしかった。なるほど貧乏性か、と希海は思う。ありがたい話ではあるのだけど。
+「助かります。そういうことならさっさと行きましょうよ。あんまり遅くなると、」
+　明日の仕事大変でしょう、という言葉が希海の喉まで出かかって止まった。自分は明日も明後日もそのまた翌日もずっと休みなのだ。
+「遅いとどうなるんですか？」
+「ほ、ほら、危険でしょ女の子だけで夜道を歩くなんて」
+　女の子が少し不思議そうに首をかしげた。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
